update to vendor version 0.4.18

--- a/help/help_cs.html
+++ b/help/help_cs.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Nápověda</title>    
+    <title>Nápověda</title>
 </head>
 
 <body>
@@ -73,45 +73,47 @@ příkazového řádku a k souborům s nastavením.</p>
 <h4><a name="file">Soubor</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Otevřít...</b> Otevře dialog pro výběr souboru k otevření v nynější
+    <li><b>Otevřít...</b> Otevře dialog pro výběr souboru k otevření v nynější
 kartě. Pokud není žádná karta, soubor je otevřen v nové kartě.</li>
-	<li><b>Otevřít v nové kartě...</b> Otevře dialog pro výběr souborů k otevření v
+    <li><b>Otevřít v nové kartě...</b> Otevře dialog pro výběr souborů k otevření v
 nových kartách.</li>
-	<li><b>Nedávno použité</b> Obsahuje seznam naposledy použitých souborů (pokud je
+    <li><b>Nedávno použité</b> Obsahuje seznam naposledy použitých souborů (pokud je
 to povoleno v nastavení).</li>
-	<li><b>Obnovit</b> Obnoví soubor zobrazený v nynější kartě.</li>
-	<li><b>Uložit kopii</b> Otevře dialog pro uložení kopie souboru zobrazeného v
-nynější kartě.</li>
-	<li><b>Uložit jako...</b> Otevře dialog pro uložení souboru zobrazeného v
+    <li><b>Obnovit</b> Obnoví soubor zobrazený v nynější kartě.</li>
+    <li><b>Uložit</b> Uloží změny ve vysvětlivkách a formulářových polí do souboru
+zobrazeného v nynější kartě.</li>
+    <li><b>Uložit jako...</b> Otevře dialog pro uložení souboru zobrazeného v
 nynější kartě včetně změn v poznámkách a formulářových polích.</li>
+    <li><b>Uložit kopii...</b> Otevře dialog pro uložení nezměněné kopie souboru
+zobrazeného v nynější kartě.</li>
     <li><b>Tisk...</b> Otevře dialog pro vytištění souboru zobrazeného v nynější
 kartě.</li>
-	<li><b>Ukončit</b> Zavře všechny karty a program ukončí.</li>
+    <li><b>Ukončit</b> Zavře všechny karty a program ukončí.</li>
 </ul>
 
 <h4><a name="edit">Úpravy</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Další/Předchozí/První/Poslední strana</b> Skočí na
+    <li><b>Další/Předchozí/První/Poslední strana</b> Skočí na
 další/předchozí/první/poslední stranu dokumentu.</li>
     <li><b>Přejít na stranu...</b> Otevře dialog pro vstoupení na stranu zobrazenou
 v nynější kartě.</li>
     <li><b>Skočit zpět/vpřed</b> Skočí zpět/vpřed v historii zobrazené strany.</li>
-	<li><b>Hledat...</b> Otevře panel pro hledání pod hlavním pohledem. Hledání
+    <li><b>Hledat...</b> Otevře panel pro hledání pod hlavním pohledem. Hledání
 začne automaticky dvě sekundy po poslední změně v hledaném výrazu nebo je
 spuštěno ručně stisknutím klávesy Enter. Pokud je podržen modifikátor Shift
 když je stisknuta klávesa Enter, prohledávání začne ve všech kartách místo
 pouze v nynější kartě. (Tento účinek je zrušen, pokud je v nastavení povolen
 panel pro rozšířené hledání.)</li>
-	<li><b>Najít předchozí/další</b> Skočí v dokumentu na předchozí/další výskyt
+    <li><b>Najít předchozí/další</b> Skočí v dokumentu na předchozí/další výskyt
 hledaného pojmu.</li>
-	<li><b>Zrušit hledání</b> Zruší nyní probíhající hledání a zavře panel pro
+    <li><b>Zrušit hledání</b> Zruší nyní probíhající hledání a zavře panel pro
 hledání.</li>
-	<li><b>Kopírovat do schránky</b> Je-li zaškrtnuto, program počká na vytvoření
+    <li><b>Kopírovat do schránky</b> Je-li zaškrtnuto, program počká na vytvoření
 rámečku pro zkopírování textu nebo obrázků tažením.</li>
-	<li><b>Přidat poznámku</b> Je-li zaškrtnuto, program počká na vytvoření rámečku
+    <li><b>Přidat poznámku</b> Je-li zaškrtnuto, program počká na vytvoření rámečku
 pro přidání poznámek tažením.</li>
-	<li><b>Nastavení...</b> Otevře dialog pro nastavení. Tlačítko označené Výchozí
+    <li><b>Nastavení...</b> Otevře dialog pro nastavení. Tlačítko označené Výchozí
 vrátí všechna nastavení všech karet zpět na jejich výchozí hodnoty. Tlačítko
 označené Výchozí na nynější kartě vrátí zpět na výchozí hodnotu pouze
 nastavení nynější karty.</li>
@@ -124,27 +126,27 @@ stisknutím klávesy Enter.</p>
 <h4><a name="view">Pohled</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Průběžně</b> Určuje, zda jsou všechny řádky rozvržení strany viditelné
+    <li><b>Průběžně</b> Určuje, zda jsou všechny řádky rozvržení strany viditelné
 zároveň.</li>
-	<li><b>Dvě strany</b> Určuje, zda rozvržení strany používá dva sloupce</li>
-	<li><b>Dvě strany s titulní stranou</b> Určuje, zda rozvržení strany používá dva
+    <li><b>Dvě strany</b> Určuje, zda rozvržení strany používá dva sloupce</li>
+    <li><b>Dvě strany s titulní stranou</b> Určuje, zda rozvržení strany používá dva
 sloupce se zalomením po titulní straně.</li>
-	<li><b>Více stran</b> Určuje, zda rozvržení strany používá více sloupců. Počet
+    <li><b>Více stran</b> Určuje, zda rozvržení strany používá více sloupců. Počet
 sloupců lze změnit v dialogu pro nastavení.</li>
     <li><b>Zprava doleva</b> Určuje, jak jsou strany uspořádány v rozvrženích s více
 stranami na řádek.</li>
-	<li><b>Přiblížit</b> Zvýší násobek měřítka o 10 procent. Největší násobek
+    <li><b>Přiblížit</b> Zvýší násobek měřítka o 10 procent. Největší násobek
 měřítka je 5000 procent.</li>
-	<li><b>Oddálit</b> Sníží násobek měřítka o 10 procent. Nejmenší násobek měřítka
+    <li><b>Oddálit</b> Sníží násobek měřítka o 10 procent. Nejmenší násobek měřítka
 je 10 procent.</li>
-	<li><b>Původní velikost</b> Nastaví násobek zvětšení znovu na 100 procent.</li>
+    <li><b>Původní velikost</b> Nastaví násobek zvětšení znovu na 100 procent.</li>
     <li><b>Přizpůsobit šířce strany</b> Určuje násobek zvětšení tak, že se všechny
 strany vodorovně zcela vejdou do hlavního pohledu.</li>
-	<li><b>Přizpůsobit velikosti strany</b> Určuje násobek zvětšení tak, že se
+    <li><b>Přizpůsobit velikosti strany</b> Určuje násobek zvětšení tak, že se
 všechny strany vodorovně i svisle zcela vejdou do hlavního pohledu.</li>
-	<li><b>Otočit vlevo</b> Otočí strany doleva/proti směru hodinových ručiček o 90
+    <li><b>Otočit vlevo</b> Otočí strany doleva/proti směru hodinových ručiček o 90
 stupňů.</li>
-	<li><b>Otočit vpravo</b> Otočí strany doprava/po směru hodinových ručiček o 90
+    <li><b>Otočit vpravo</b> Otočí strany doprava/po směru hodinových ručiček o 90
 stupňů.</li>
     <li><b>Obrátit barvy</b> Určuje, zda jsou strany kresleny s obrácenými barvami.</li>
     <li><b>Převést na odstíny šedi</b> Určuje, zda jsou strany po vykreslení
@@ -153,14 +155,14 @@ převedeny na odstíny šedi.</li>
 vykreslení.</li>
     <li><b>Přizpůsobení barev</b> Povolí přizpůsobení barev vykreslené strany barvě
 papíru pro upravení pozadí nasnímaných dokumentů.</li>
-	<li><b>Nástrojové panely</b> Tato nabídka obsahuje seznam dostupných
+    <li><b>Nástrojové panely</b> Tato nabídka obsahuje seznam dostupných
 nástrojových panelů pro přístup k často používaným činnostem.</li>
-	<li><b>Postranní panely</b> Tato nabídka obsahuje seznam dostupných postranních
+    <li><b>Postranní panely</b> Tato nabídka obsahuje seznam dostupných postranních
 panelů pro zobrazení doplňkových informací.</li>
-	<li><b>Písma...</b> Otevře dialog uvádějící v seznamu písma použitá v dokumentu.</li>
-	<li><b>Celá obrazovka</b> Přepne režim na celou obrazovku, tj. okno je ukázáno
+    <li><b>Písma...</b> Otevře dialog uvádějící v seznamu písma použitá v dokumentu.</li>
+    <li><b>Celá obrazovka</b> Přepne režim na celou obrazovku, tj. okno je ukázáno
 zvětšené a bez dekorace.</li>
-	<li><b>Promítání...</b> Vstoupí do režimu promítání, jejž lze opustit stisknutím
+    <li><b>Promítání...</b> Vstoupí do režimu promítání, jejž lze opustit stisknutím
 klávesy F12 nebo Esc. Klávesa Home/End se používá k zobrazení první/poslední
 strany. Klávesy šipek vpravo a dolů, mezerník a Page Down se používají pro
 skok na další stranu. Klávesy šipek vlevo a nahoru, Backspace a Page Up se
@@ -446,16 +448,18 @@ Přiblížit, Oddálit, Průběžně, Dvě strany, Dvě strany s titulní strano
 stran, Původní velikost, Přizpůsobit šířce strany, Přizpůsobit velikosti
 strany, Otočit vlevo, Otočit vpravo, Celá obrazovka, Promítání a
 oddělovač. (Nabude účinnosti po opětovném spuštění programu.)</li>
-    <li><b>Související nabídka k dokumentu</b> Stanovuje, které činnosti jsou
-viditelné v nabídce souvisejících činností pro dokument. Dostupnými
-činnostmi jsou openCopyInNewTab, openContainingFolder, previousPage,
-nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
-setFirstPage, findPrevious, findNext, cancelSearch a oddělovač.</li>
-    <li><b>Související nabídka ke kartě</b> Stanovuje, které činnosti jsou viditelné
-v nabídce souvisejících činností pro kartu. Dostupnými činnostmi jsou
-openCopyInNewTab, openContainingFolder, copyFilePath, selectFilePath,
-closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
-closeAllTabsToTheRight a oddělovač</li>
+    <li><b>Související nabídka k dokumentu</b> Určuje, které činnosti jsou viditelné
+v související nabídce k dokumentu. Dostupnými činnostmi jsou otevření kopie
+v nové kartě, otevření kopie v novém okně, otevření obsahující složky,
+přechod na instanci, předchozí strana, další strana, první strana, poslední
+strana, skok na stranu, skok zpět, skok vpřed, nastavení první strany,
+nalezení předchozího, nalezení dalšího, zrušení hledání a oddělovač.</li>
+    <li><b>Související nabídka ke kartě</b> Určuje, které činnosti jsou viditelné v
+související nabídce ke kartě. Dostupnými činnostmi jsou otevření kopie v
+nové kartě, otevření kopie v novém okně, otevření obsahující složky, přechod
+na instanci, kopírování cesty k souboru, vybrání cesty k souboru, zavření
+všech karet, zavření všech karet až na označenou, zavření všech karet
+nalevo, zavření všech karet napravo a oddělovač.</li>
     <li><b>Ubíhající nabídky</b> Přepíše výchozí styl, takže položky v nabídkách při
 projíždění ubíhají, místo toho aby byly zobrazeny ve více sloupcích, v
 případě že zabírají více místa, než je dostupný prostor na
