--- a/help/help_da.html
+++ b/help/help_da.html
@@ -29,37 +29,37 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Help</title>
+    <title>Hjælp</title>
 </head>
 
 <body>
 
-<h2><a name="top">Help</a></h2>
+<h2><a name="top">Hjælp</a></h2>
 
-<h4>Table of contents</h4>
+<h4>Indholdsfortegnelse</h4>
 <ol>
-    <li><a href="#mainmenu">Main menu</a></li>
+    <li><a href="#mainmenu">Hovedmenu</a></li>
     <ol>
-        <li><a href="#file">File</a></li>
-        <li><a href="#edit">Edit</a></li>
-        <li><a href="#view">View</a></li>
-        <li><a href="#tabs">Tabs</a></li>
-        <li><a href="#bookmarks">Bookmarks</a></li>
-        <li><a href="#help">Help</a></li>
+        <li><a href="#file">Fil</a></li>
+        <li><a href="#edit">Rediger</a></li>
+        <li><a href="#view">Vis</a></li>
+        <li><a href="#tabs">Faneblade</a></li>
+        <li><a href="#bookmarks">Bogmærker</a></li>
+        <li><a href="#help">Hjælp</a></li>
     </ol>
-    <li><a href="#mainview">Main view</a></li>
+    <li><a href="#mainview">Hovedvisning</a></li>
     <li><a href="#auxiliaryviews">Auxiliary views</a></li>
-    <li><a href="#settings">Settings</a></li>
+    <li><a href="#settings">Indstillinger</a></li>
     <ol>
-    	<li><a href="#behaviorsettings">Behavior settings</a></li>
-    	<li><a href="#graphicssettings">Graphics settings</a></li>
-    	<li><a href="#interfacesettings">Interface settings</a></li>
-    	<li><a href="#shortcutsettings">Shortcut settings</a></li>
+    	<li><a href="#behaviorsettings">Opførselsindstillinger</a></li>
+    	<li><a href="#graphicssettings">Grafikindstillinger</a></li>
+    	<li><a href="#interfacesettings">Grænsefladeindstillinger</a></li>
+    	<li><a href="#shortcutsettings">Genvejsindstillinger</a></li>
     	<li><a href="#modifiersettings">Modifier settings</a></li>
     </ol>
 </ol>
 
-<h4>Introduction</h4>
+<h4>Introduktion</h4>
 
 <p><em>qpdfview</em> is a tabbed document viewer. It uses Poppler for PDF
 support, libspectre for PS support, DjVuLibre for DjVu support, CUPS for
@@ -68,9 +68,9 @@ printing support and the Qt toolkit for its interface.</p>
 <p>Please refer to the manual page for information on command-line options and
 configuration files.</p>
 
-<h3><a name="mainmenu">Main menu</a> <a href="#top">&uarr;</a></h3>
+<h3><a name="mainmenu">Hovedmenu</a> <a href="#top">&uarr;</a></h3>
 
-<h4><a name="file">File</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="file">Fil</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Open...</b> Opens a dialog to choose a file to open in the current
@@ -88,10 +88,10 @@ tab including changes to annotations and form fields.</li>
 displayed in the current tab.</li>
     <li><b>Print...</b> Opens a dialog to print the file displayed in the current
 tab.</li>
-    <li><b>Exit</b> Closes all tabs and ends the program.</li>
+    <li><b>Afslut</b> Luk alle faneblade of afslut programmet.</li>
 </ul>
 
-<h4><a name="edit">Edit</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="edit">Rediger</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Next/Previous/First/Last page</b> Skips to the next/previous/first/last
