--- a/help/help_de.html
+++ b/help/help_de.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Hilfe</title>    
+    <title>Hilfe</title>
 </head>
 
 <body>
@@ -74,49 +74,51 @@ der Kommandozeilenanleitung zu finden.</p>
 <h4><a name="file">Datei</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Öffnen...</b> Öffnet einen Auswahldialog zum Öffnen einer Datei im
+    <li><b>Öffnen...</b> Öffnet einen Auswahldialog zum Öffnen einer Datei im
 aktuellen Reiter. Falls kein Reiter vorhanden ist, wird die Datei in einem
 neuen Reiter geöffnet.</li>
-	<li><b>In neuem Reiter öffnen...</b> Öffnet einen Auswahldialog zum Öffnen von
+    <li><b>In neuem Reiter öffnen...</b> Öffnet einen Auswahldialog zum Öffnen von
 Dateien in neuen Reitern.</li>
-	<li><b>Zuletzt verwendet</b> Enthält eine Liste der zuletzt verwendeten Dateien
+    <li><b>Zuletzt verwendet</b> Enthält eine Liste der zuletzt verwendeten Dateien
 (falls dies in den Einstellungen eingeschaltet ist).</li>
-	<li><b>Aktualisieren</b> Lädt die Datei neu, die im aktuellen Reiter angezeigt
+    <li><b>Aktualisieren</b> Lädt die Datei neu, die im aktuellen Reiter angezeigt
 wird.</li>
-	<li><b>Kopie speichern...</b> Öffnet einen Auswahldialog zum Speichern einer
-Kopie der im aktuellen Reiter angezeigten Datei.</li>
-	<li><b>Speichern unter...</b> Öffnet einen Auswahldialog zum Speichern einer
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Speichern unter...</b> Öffnet einen Auswahldialog zum Speichern einer
 Kopie der im aktuellen Reiter angezeigten Datei mit allen Änderungen an
 Anmerkungen und Formularfeldern.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Drucken...</b> Öffnet einen Druckdialog für die im aktuellen Reiter
 angezeigte Datei.</li>
-	<li><b>Beenden</b> Schließt alle Reiter und beendet das Programm.</li>
+    <li><b>Beenden</b> Schließt alle Reiter und beendet das Programm.</li>
 </ul>
 
 <h4><a name="edit">Bearbeiten</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Vorige/Nächste/Erste/Letzte Seite</b> Springt zur
+    <li><b>Vorige/Nächste/Erste/Letzte Seite</b> Springt zur
 vorigen/nächsten/ersten/letzten Seite des Dokuments.</li>
     <li><b>Zu Seite springen...</b> Öffnet einen Dialog zur Eingabe einer Seite zur
 Anzeige im aktuellen Reiter.</li>
     <li><b>Springe rückwärts/vorwärts</b> Springt rückwärts/vorwärts in der Chronik
 der angezeigten Seiten.</li>
-	<li><b>Suchen...</b> Öffnet die Suchansicht unter der Hauptansicht. Die Suche
+    <li><b>Suchen...</b> Öffnet die Suchansicht unter der Hauptansicht. Die Suche
 beginnt automatisch zwei Sekunden nach der letzten Änderung des Suchbegriffs
 oder wird manuell mit der Eingabetaste gestartet. Falls die Umschalttaste
 gehalten wird, während die Eingabetaste gedrückt wird, startet die Suche in
 allen Reitern anstatt nur dem aktuellen Reiter. (Dieser Effekt wird
 umgekehrt falls die erweiterte Suchansicht verwendet wird.)</li>
-	<li><b>Rückwärts/Vorwärts suchen</b> Springt zur vorigen/nächsten Fundstelle des
+    <li><b>Rückwärts/Vorwärts suchen</b> Springt zur vorigen/nächsten Fundstelle des
 Suchbegriffs im Dokument.</li>
-	<li><b>Suche abbrechen</b> Bricht die aktuelle laufende Suche ab und schließt
+    <li><b>Suche abbrechen</b> Bricht die aktuelle laufende Suche ab und schließt
 die Suchansicht.</li>
-	<li><b>In Zwischenablage kopieren</b> Wenn aktiviert, wird das Programm darauf
+    <li><b>In Zwischenablage kopieren</b> Wenn aktiviert, wird das Programm darauf
 warten, dass zum Kopieren ein Rahmen um Text oder Bilder gezogen wird.</li>
-	<li><b>Anmerkung hinzufügen</b> Wenn aktiviert, wird das Programm darauf warten,
+    <li><b>Anmerkung hinzufügen</b> Wenn aktiviert, wird das Programm darauf warten,
 dass ein Rahmen gezogen wird um Anmerkungen hinzuzufügen.</li>
-	<li><b>Einstellungen...</b> Öffnet den Einstellungsdialog. Die Schaltflächen mit
+    <li><b>Einstellungen...</b> Öffnet den Einstellungsdialog. Die Schaltflächen mit
 der Aufschrift 'Vorgaben' setzt alle Einstellungen in allen Reitern des
 Einstellungsdialogs auf ihre Vorgabewerte. Die Schaltfläche 'Vorgaben auf
 aktuellem Reiter' setzt nur die Einstellungen im aktuellen Reiter des
@@ -131,28 +133,28 @@ werden.</p>
 <h4><a name="view">Ansicht</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Fortlaufend</b> Legt fest, ob die Seiten fortlaufend in Reihen
+    <li><b>Fortlaufend</b> Legt fest, ob die Seiten fortlaufend in Reihen
 übereinander angezeigt werden.</li>
-	<li><b>Zweiseitig</b> Legt fest, ob die Seitenanzeige zweispaltig ist.</li>
-	<li><b>Zweiseitig mit Titelseite</b> Legt fest, ob die Seitenanzeige zweispaltig
+    <li><b>Zweiseitig</b> Legt fest, ob die Seitenanzeige zweispaltig ist.</li>
+    <li><b>Zweiseitig mit Titelseite</b> Legt fest, ob die Seitenanzeige zweispaltig
 ist und die Titelseite einzeln anzeigt.</li>
-	<li><b>Mehrere Seiten</b> Legt fest, ob die Seitenanzeige mehrspaltig ist. Die
+    <li><b>Mehrere Seiten</b> Legt fest, ob die Seitenanzeige mehrspaltig ist. Die
 Anzahl der Spalten für diese Anzeigeart kann im Einstellungsdialog geändert
 werden.</li>
     <li><b>Rechts nach links</b> Bestimmt wie die Seiten in Darstellungen mit
 mehreren Seiten pro Reihe angeordnet werden.</li>
-	<li><b>Vergrößern</b> Vergrößert den Skalenfaktor um 10 Prozent. Der Maximalwert
+    <li><b>Vergrößern</b> Vergrößert den Skalenfaktor um 10 Prozent. Der Maximalwert
 beträgt 5000 Prozent.</li>
-	<li><b>Verkleinern</b> Verkleinert den Skalenfaktor um 10 Prozent. Der
+    <li><b>Verkleinern</b> Verkleinert den Skalenfaktor um 10 Prozent. Der
 Minimalwert beträgt 10 Prozent.</li>
-	<li><b>Ursprüngliche Größe</b> Setzt den Skalenfaktor auf 100 Prozent zurück.</li>
+    <li><b>Ursprüngliche Größe</b> Setzt den Skalenfaktor auf 100 Prozent zurück.</li>
     <li><b>An Seitenbreite anpassen</b> Bestimmt den Skalenfaktor so dass eine Zeile
 von Seiten die Hauptansicht horizontal ausfüllt.</li>
-	<li><b>An Seitengröße anpassen</b> Bestimmt den Skalenfaktor so dass eine Zeile
+    <li><b>An Seitengröße anpassen</b> Bestimmt den Skalenfaktor so dass eine Zeile
 von Seiten vollständig in der Hauptansicht angezeigt wird.</li>
-	<li><b>Nach links drehen</b> Dreht alle Seiten nach links gegen den
+    <li><b>Nach links drehen</b> Dreht alle Seiten nach links gegen den
 Uhrzeigersinn um 90 Grad.</li>
-	<li><b>Nach rechts drehen</b> Dreht alle Seiten nach rechts im Uhrzeigersinn um
+    <li><b>Nach rechts drehen</b> Dreht alle Seiten nach rechts im Uhrzeigersinn um
 90 Grad.</li>
     <li><b>Farben umkehren</b> Legt fest, ob Seiten mit umgekehrten Farben
 dargestellt werden.</li>
@@ -163,15 +165,15 @@ Seitenränder.</li>
     <li><b>Farbanpassung</b> Aktiviert das Mischen der Seitendarstellung mit der
 Papierfarbe um beispielsweise den Hintergrund eingescannter Dokumente
 anzupassen.</li>
-	<li><b>Werkzeugleisten</b> Dieses Menü enthält eine Liste verfügbarer
+    <li><b>Werkzeugleisten</b> Dieses Menü enthält eine Liste verfügbarer
 Werkzeugleisten zum Zugriff auf häufig genutzte Aktionen.</li>
-	<li><b>Paletten</b> Dieses Menü enthält eine Liste verfügbarer Paletten zur
+    <li><b>Paletten</b> Dieses Menü enthält eine Liste verfügbarer Paletten zur
 Anzeige von Zusatzinformationen.</li>
-	<li><b>Schriften...</b> Öffnet einen Dialog, der die im Dokument verwendeten
+    <li><b>Schriften...</b> Öffnet einen Dialog, der die im Dokument verwendeten
 Schriftarten auflistet.</li>
-	<li><b>Vollbild</b> Schaltet die Vollbildanzeige ein, in der das Fenster
+    <li><b>Vollbild</b> Schaltet die Vollbildanzeige ein, in der das Fenster
 maximiert und ohne Fensterdekorationen angezeigt wird.</li>
-	<li><b>Präsentation...</b> Schaltet in den Präsentationsmodus, der durch Drücken
+    <li><b>Präsentation...</b> Schaltet in den Präsentationsmodus, der durch Drücken
 von F12 oder Escape verlassen werden kann. Die Pos1/Ende-Tasten werden
 verwendet um die erste/letzte Seite zu zeigen. Die Pfeiltasten rechts und
 unten, die Leertaste und die Bild-ab-Taste springen zur nächsten Seite. Die
@@ -498,13 +500,14 @@ Aktionen sind "scaleFactor" (Skalenfaktor), "zoomIn" (Vergrößern), "zoomOut"
 (Trennelement). (Tritt nach Neustart des Programms in Kraft.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Laufende Menüs</b> Überschreibt die Vorgabe des Standardstils, so dass
 Menüs laufen anstatt in mehreren Spalten dargestellt zu werden, falls sie
 größer sind als die verfügbare Bildschirmfläche. (Nach Neustart wirksam.)</li>
