--- a/help/help_fr.html
+++ b/help/help_fr.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Aide</title>    
+    <title>Aide</title>
 </head>
 
 <body>
@@ -74,50 +74,52 @@ options en ligne de commande et sur les fichiers de configuration.</p>
 <h4><a name="file">Fichier</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Ouvrir...</b> Ouvre une boîte de dialogue pour choisir un fichier à
+    <li><b>Ouvrir...</b> Ouvre une boîte de dialogue pour choisir un fichier à
 ouvrir dans l'onglet courant. S'il n'y a pas d'onglet, le fichier est ouvert
 dans un nouvel onglet.</li>
-	<li><b>Ouvrir dans un nouvel onglet...</b> Ouvre une boîte de dialogue pour
+    <li><b>Ouvrir dans un nouvel onglet...</b> Ouvre une boîte de dialogue pour
 choisir les fichiers à ouvrir dans de nouveaux onglets.</li>
-	<li><b>Récemment utilisés</b> Contient une liste des fichiers récemment utilisés
+    <li><b>Récemment utilisés</b> Contient une liste des fichiers récemment utilisés
 (si l'option est activée dans les paramètres).</li>
-	<li><b>Actualiser</b> Recharge le fichier affiché dans l'onglet courant.</li>
-	<li><b>Enregistrer une copie...</b> Ouvre une boîte de dialogue pour enregistrer
-une copie du fichier affiché dans l'onglet courant.</li>
-	<li><b>Enregistrer sous...</b> Ouvre une boîte de dialogue pour enregistrer le
+    <li><b>Actualiser</b> Recharge le fichier affiché dans l'onglet courant.</li>
+    <li><b>Enregistrer</b> Enregistre les modifications des annotations et champs de
+formulaire dans le fichier affiché dans l'onglet actuel.</li>
+    <li><b>Enregistrer sous...</b> Ouvre une boîte de dialogue pour enregistrer le
 fichier affiché dans l'onglet courant y compris les modifications des
 annotations et des champs de formulaire.</li>
+    <li><b>Enregistrer une copie…</b> Ouvre une boîte de dialogue pour enregistrer
+une copie non modifiée du fichier affiché dans l'onglet actuel.</li>
     <li><b>Imprimer...</b> Ouvre une boîte de dialogue pour imprimer le fichier
 affiché dans l'onglet courant.</li>
-	<li><b>Quitter</b> Ferme tous les onglets, puis le programme.</li>
+    <li><b>Quitter</b> Ferme tous les onglets, puis le programme.</li>
 </ul>
 
 <h4><a name="edit">Édition</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Page suivante/Page précédente/Première page/Dernière page</b> Va à la
+    <li><b>Page suivante/Page précédente/Première page/Dernière page</b> Va à la
 page suivante/page précédente/première page/dernière page du document.</li>
     <li><b>Aller à la page...</b> Ouvre une boîte de dialogue demandant le numéro de
 la page à afficher dans l'onglet courant.</li>
     <li><b>Aller vers l'arrière/l'avant</b> Aller vers l'arrière/l'avant dans
 l'historique des pages affichées.</li>
-	<li><b>Rechercher...</b> Ouvre la barre de recherche sous l'affichage
+    <li><b>Rechercher...</b> Ouvre la barre de recherche sous l'affichage
 principal. La recherche démarre automatiquement 2 secondes après le dernier
 changement du terme de recherche ou est démarrée manuellement en appuyant
 sur la touche entrée. Si la touche Maj est maintenue enfoncée quand la
 touche entrée est pressée, la recherche démarre dans tous les onglets, et
 non plus seulement dans l'onglet actuel. (Cet effet est annulé si la barre
 de recherche avancée est activée dans les paramètres.)</li>
-	<li><b>Rechercher le précédent/suivant</b> Saute à l'occurrence
+    <li><b>Rechercher le précédent/suivant</b> Saute à l'occurrence
 précédente/suivante du terme recherché dans le document.</li>
-	<li><b>Annuler la recherche</b> Annule la recherche en cours et ferme la barre
+    <li><b>Annuler la recherche</b> Annule la recherche en cours et ferme la barre
 de recherche.</li>
-	<li><b>Copier dans le presse-papiers</b> Lorsque l'action est lancée, le
+    <li><b>Copier dans le presse-papiers</b> Lorsque l'action est lancée, le
 programme attend le tracé d'une zone de sélection à la souris pour copier
 son contenu sous forme de textes ou d'images.</li>
-	<li><b>Ajouter une annotation</b> Lorsque cette action est lancée, le programme
+    <li><b>Ajouter une annotation</b> Lorsque cette action est lancée, le programme
 attend qu'une zone soit tracée avec la souris pour y ajouter une annotation.</li>
-	<li><b>Paramètres...</b> Ouvre la boîte de dialogue des paramètres. Le bouton «
+    <li><b>Paramètres...</b> Ouvre la boîte de dialogue des paramètres. Le bouton «
 Défauts » permet de restaurer tous les réglages de tous les onglets à leur
 valeur par défaut. Le bouton « Défauts sur l'onglet actuel » ne restaure les
 paramètres par défaut que de l'onglet courant.</li>
@@ -130,27 +132,27 @@ accéder par Ctrl+K, et en validant par la touche entrée.</p>
 <h4><a name="view">Affichage</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Continu</b> Permet de rendre simultanément visibles les différentes
+    <li><b>Continu</b> Permet de rendre simultanément visibles les différentes
 lignes de la mise en page.</li>
-	<li><b>Deux pages</b> Mise en page en mode deux colonnes.</li>
-	<li><b>Deux pages avec page de couverture</b> Mise en page en deux colonnes avec
+    <li><b>Deux pages</b> Mise en page en mode deux colonnes.</li>
+    <li><b>Deux pages avec page de couverture</b> Mise en page en deux colonnes avec
 un saut de page pour la page de couverture.</li>
-	<li><b>Multiples pages</b> Mode de mise en page à plusieurs colonnes. Le nombre
+    <li><b>Multiples pages</b> Mode de mise en page à plusieurs colonnes. Le nombre
 de colonnes se règle dans le menu paramètres.</li>
     <li><b>Droite vers la gauche</b> Indique comment les pages sont présentées
 lorsque la mise en page multiple comporte plusieurs pages par ligne.</li>
-	<li><b>Zoom avant</b> Augmente le facteur d'échelle par tranche de 10 %. Le
+    <li><b>Zoom avant</b> Augmente le facteur d'échelle par tranche de 10 %. Le
 facteur d'échelle maximum est de 5000 %.</li>
-	<li><b>Zoom arrière</b> Diminue le facteur d'échelle par tranche de 10 %. Le
+    <li><b>Zoom arrière</b> Diminue le facteur d'échelle par tranche de 10 %. Le
 facteur d'échelle minimum est de 10 %.</li>
-	<li><b>Taille originale</b> Rétablit le facteur d'échelle à 100 pourcent.</li>
+    <li><b>Taille originale</b> Rétablit le facteur d'échelle à 100 pourcent.</li>
     <li><b>Ajuster à la largeur de la page</b> Ajuste le facteur d'échelle de façon
 à ce que la page occupe toute la largeur de la fenêtre principale.</li>
-	<li><b>Ajuster à la taille de la page</b> Ajuste le facteur d'échelle de façon à
+    <li><b>Ajuster à la taille de la page</b> Ajuste le facteur d'échelle de façon à
 ce que la page occupe toute la hauteur de la fenêtre principale.</li>
-	<li><b>Rotation vers la gauche</b> Tourne la page vers la gauche (le sens
+    <li><b>Rotation vers la gauche</b> Tourne la page vers la gauche (le sens
 contraire des aiguilles d'une montre) de 90 degrés.</li>
-	<li><b>Rotation vers la droite</b> Tourne la page vers la droite (le sens des
+    <li><b>Rotation vers la droite</b> Tourne la page vers la droite (le sens des
 aiguilles d'une montre) de 90 degrés.</li>
     <li><b>Inverser les couleurs</b> Précise que les pages doivent être affichées en
 couleurs inversées.</li>
@@ -159,15 +161,15 @@ en niveaux de gris après le rendu.</li>
     <li><b>Rogner les marges</b> Active la suppression des marges de page vides
 après le rendu.</li>
     <li><b>Composition</b></li>
-	<li><b>Barre d'outils</b> Ce menu contient une liste de barres d'outils
+    <li><b>Barre d'outils</b> Ce menu contient une liste de barres d'outils
 disponibles pour accéder aux actions fréquemment utilisées.</li>
-	<li><b>Docks</b> Ce menu contient la liste des docks disponibles pour afficher
+    <li><b>Docks</b> Ce menu contient la liste des docks disponibles pour afficher
 des informations supplémentaires.</li>
-	<li><b>Polices...</b> Ouvre une boîte de dialogue cataloguant l'ensemble des
+    <li><b>Polices...</b> Ouvre une boîte de dialogue cataloguant l'ensemble des
 polices de caractères utilisées dans le document.</li>
-	<li><b>Plein écran</b> Bascule en mode plein écran ; la fenêtre occupe la taille
+    <li><b>Plein écran</b> Bascule en mode plein écran ; la fenêtre occupe la taille
 maximale sans décoration.</li>
-	<li><b>Présentation...</b> Entre dans le mode présentation que l'on peut quitter
+    <li><b>Présentation...</b> Entre dans le mode présentation que l'on peut quitter
 par les touches F12 ou Echap. La touche Home/Fin permet d'afficher la
 première/dernière page. Les touches droite, bas ou espace permettent d'aller
 à la page suivante. Les touches gauche, haut ou retour permettent d'aller à
@@ -270,8 +272,9 @@ to <em>remove annotations</em>. (Adding and removing annotations requires
 version 0.20.1 or higher of the Poppler library.) Hovering over an
 annotation displays its contents as a tool tip.</p>
 
-<p>To <em>zoom to a selection</em>, hold <b>SHIFT</b> and <b>CTRL</b>, click
-and hold the left mouse button to drag a frame around region to zoom into.</p>
+<p>Pour <em>zoomer sur la sélection</em>, maintenir <b>Maj</b> et <b>Ctrl</b>,
+puis cliquer et maintenir le bouton gauche de la souris enfoncé pour
+encadrer la région à agrandir.</p>
 
 <p>La <em>visibilité des barres d’outils et de menu</em> peut être alternée en
 utilisant les raccourcis clavier configurables dont les valeurs par défaut
@@ -279,10 +282,10 @@ sont « Shift + Alt + T » et « Shift + Alt + M ».</p>
 
 <h3><a name="auxiliaryviews">Vues auxiliaires</a> <a href="#top">&uarr;</a></h3>
 
-<p>The <em>outline view</em> displays an overview of the contents of the
-document. A left click on an entry jumps to the respective page in the main
-view. The context menu can be used to expand/collapse all items below the
-selected item.</p>
+<p>Le <em>sommaire</em> (F6) affiche une vue d'ensemble du contenu du
+document. Un clic gauche sur une entrée bascule sur la page respective dans
+la vue principale. Le menu contextuel peut être utilisé pour
+développer/réduire tous les éléments en dessous de l'élément sélectionné.</p>
 
 <p>The outline view can also be navigated using the keyboard and the mouse
 wheel. Holding Shift and using the Up/Down keys will scroll the
@@ -293,23 +296,24 @@ children. Holding Shift and using the mousel wheel will change the selected
 item. Holding Control and using the mouse wheel will expand/collapse the
 selected item.</p>
 
-<p>The <em>properties view</em> displays additional information contained in
-the document.</p>
+<p>L' <em>affichage des propriétés</em> permet d'afficher des informations
+supplémentaires contenues dans le document.</p>
 
-<p>The <em>thumbnails view</em> displays smaller versions of the pages of the
-document. A left click on an entry jumps to the respective page in the main
-view.</p>
+<p>L' <em>affichage des miniatures</em> permet d'afficher des versions plus
+petites des pages du document. Un clic gauche dans une entrée passe à la
+page respective dans la vue principale.</p>
 
 <p>The <em>bookmarks view</em> shows the bookmarks related to the document
 displayed in the current tab. The context menu contains entries to jump to
 the previous/next boookmark or to add bookmarks. The context menu of each
 entry also contains entries to edit and delete bookmarks.</p>
 
-<p>If enabled in the settings, the <em>extended search dock</em> shows an
-overview containing the results of all searches being performed in all
-tabs. It also shows the text surrounding a result with the search term being
-emphasized. Clicking on a result opens the corresponding tab and jumps to
-its position.</p>
+<p>Si activé dans les paramètres, la <em>barre de recherche avancée</em>
+affiche une vue d'ensemble contenant les résultats de toutes les recherches
+étant exécutées dans tous les onglets. Elle affiche également le texte au
+environ d'un résultat avec le terme de recherche étant mis en
+surbrillance. Cliquer sur un résultat ouvre l'onglet correspondant et
+bascule sur sa position.</p>
 
 <h3><a name="settings">Paramètres</a> <a href="#top">&uarr;</a></h3>
 
@@ -430,9 +434,9 @@ dédiés à l'anti-crénelage du texte.</li>
 <ul>
     <li><b>Extended search dock</b> If enabled, the default search dock is extended
 by an overview showing the results of all tabs. (Effective after restart.)</li>
-    <li><b>Annotation overlay</b> If enabled, all annotations on a page will be
-displayed as an interactive overlay. Otherwise each annotation will be
-handled as a separate pop-up window.</li>
+    <li><b>Superposition des annotations</b> Si activé, toutes les annotations
+présentes sur la page seront affichées en même temps. Autrement, chaque
+annotation sera affichée séparément.</li>
     <li><b>Form field overlay</b> If enabled, all form fields on a page will be
 displayed as an interactive overlay. Otherwise each form field will be
 handled as a separate pop-up window.</li>
@@ -444,8 +448,8 @@ moins de deux documents ouverts.</li>
 au-delà de la barre des onglets.</li>
     <li><b>Nouvel onglet à côté de l'onglet courant</b> Si l'item est validé, les
 nouveaux onglets sont ouverts à droite de l'onglet courant.</li>
-    <li><b>Exit after last tab</b> If enabled, the application exits after the last
-tab is closed.</li>
+    <li><b>Fermer avec le dernier onglet</b> Si l'option est validée, l'application
+ferme après la fermeture du dernier onglet.</li>
     <li><b>Compteur des fichiers récemments ouverts</b> Précise le nombre de
 fichiers qui sont listés dans le menu des fichiers récemments ouverts, si
 l'item « Suivre les fichiers récemment ouverts » est validé (option
@@ -470,13 +474,14 @@ rotateLeft, rotateRight, fullscreen, presentation et separator. (Nécessite
 un redémarrage.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Scrollable menus</b> Will override the default style so that pop-up menus
 scroll instead being laid-out in mutliple columns if they are larger than
 the available screen space. (Effective after restart.)</li>
