--- a/help/help_it.html
+++ b/help/help_it.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Guida</title>    
+    <title>Guida</title>
 </head>
 
 <body>
@@ -73,48 +73,50 @@ e per i file di configurazione.</p>
 <h4><a name="file">File</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Apri...</b> apre un dialogo per consentire la scelta di un file da
+    <li><b>Apri...</b> apre un dialogo per consentire la scelta di un file da
 visualizzare nella scheda corrente. Se non è aperta alcuna scheda, il file
 verrà aperto in una nuova.</li>
-	<li><b>Apri in nuova scheda...</b> apre un dialogo per consentire di scegliere i
+    <li><b>Apri in nuova scheda...</b> apre un dialogo per consentire di scegliere i
 file da aprire nelle nuove schede.</li>
-	<li><b>Usati di recente</b> contiene un elenco dei file usati più recentemente
+    <li><b>Usati di recente</b> contiene un elenco dei file usati più recentemente
 (se abilitato nelle impostazioni).</li>
-	<li><b>Aggiorna</b> ricarica il file visualizzato nella scheda corrente.</li>
-	<li><b>Salva una copia...</b> apre un dialogo per consentire il salvataggio del
-file visualizzato nella scheda corrente.</li>
-	<li><b>Salva come...</b> apre un dialogo per consentire il salvataggio del file
+    <li><b>Aggiorna</b> ricarica il file visualizzato nella scheda corrente.</li>
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Salva come...</b> apre un dialogo per consentire il salvataggio del file
 visualizzato nella scheda corrente includendo le modifiche alle note e ai
 campi del form.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Stampa...</b> apre un dialogo per la stampa del file visualizzato nella
 scheda corrente.</li>
-	<li><b>Esci</b> chiude tutte le schede e termina il programma.</li>
+    <li><b>Esci</b> chiude tutte le schede e termina il programma.</li>
 </ul>
 
 <h4><a name="edit">Modifica</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Pagina successiva/precedente e Prima/Ultima pagina</b> consentono lo
+    <li><b>Pagina successiva/precedente e Prima/Ultima pagina</b> consentono lo
 spostamento attraverso le pagine del documento.</li>
     <li><b>Vai alla pagina...</b> apre un dialogo dove inserire la pagina da
 visualizzare nella scheda corrente.</li>
     <li><b>Va indietro/avanti</b> si sposta indietro e avanti nella cronologia della
 pagina visualizzata.</li>
-	<li><b>Search...</b> Opens the search dock below the main view. The search
+    <li><b>Search...</b> Opens the search dock below the main view. The search
 automatically starts two seconds after the last change of the search term or
 is manually started by pressing the return key. If the Shift modifier is
 held when the return key is pressed, the search starts in all tabs instead
 of just the current tab. (This effect is reversed if the extended search
 dock is enabled in the settings.)</li>
-	<li><b>Trova precedente/successivo</b> va al risultato precedente/successivo del
+    <li><b>Trova precedente/successivo</b> va al risultato precedente/successivo del
 termine ricercato nel documento.</li>
-	<li><b>Cancel search</b> Cancels the currently running search and closes the
+    <li><b>Cancel search</b> Cancels the currently running search and closes the
 search dock.</li>
-	<li><b>Copia negli appunti</b> se selezionato, il programma attenderà la
+    <li><b>Copia negli appunti</b> se selezionato, il programma attenderà la
 selezione di una parte del documenti per copiare testi o immagini.</li>
-	<li><b>Aggiungi nota</b> se selezionato, il programma attenderà la selezione di
+    <li><b>Aggiungi nota</b> se selezionato, il programma attenderà la selezione di
 una parte del documento per aggiungere le note.</li>
-	<li><b>Impostazioni...</b> apre la finestra delle impostazioni. Il pulsante
+    <li><b>Impostazioni...</b> apre la finestra delle impostazioni. Il pulsante
 «Predefiniti» riporterà tutte le impostazioni di tutte le schede ai valori
 predefiniti. Il pulsante «Ripristina i valori predefiniti per la scheda
 attuale» riporterà ai valori predefiniti solo le impostazioni della scheda
@@ -128,29 +130,29 @@ Ctrl+K e premendo il tasto «Invio».</p>
 <h4><a name="view">Visualizza</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Continuo</b> indica se rendere visibili tutte le righe della pagina in
+    <li><b>Continuo</b> indica se rendere visibili tutte le righe della pagina in
 una volta.</li>
-	<li><b>Due pagine</b> indica se il layout della pagina usa due colonne.</li>
-	<li><b>Due pagine compresa la copertina</b> indica se il layout della pagina usa
+    <li><b>Due pagine</b> indica se il layout della pagina usa due colonne.</li>
+    <li><b>Due pagine compresa la copertina</b> indica se il layout della pagina usa
 due colonne con una interruzione dopo la copertina.</li>
-	<li><b>Pagine multiple</b> indica se il layout della pagina usa più colonne. Il
+    <li><b>Pagine multiple</b> indica se il layout della pagina usa più colonne. Il
 numero di colonne può essere modificato nelle impostazioni.</li>
     <li><b>Da destra a sinistra</b> indica come posizionare le pagine nei layout con
 più pagine per riga.</li>
-	<li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
+    <li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
 factor is 5000 percent.</li>
-	<li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
+    <li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
 factor is 10 percent.</li>
-	<li><b>Dimensione originale</b> ripristina il fattore di scala al 100%.</li>
+    <li><b>Dimensione originale</b> ripristina il fattore di scala al 100%.</li>
     <li><b>Adatta alla larghezza della pagina</b> indica il fattore di scala
 consentendo la visualizzazione di tutte le pagine adattate alla dimensione
 orizzontale della finestra principale.</li>
-	<li><b>Adatta alla dimensione della pagina</b> indica il fattore di scala
+    <li><b>Adatta alla dimensione della pagina</b> indica il fattore di scala
 consentendo la visualizzazione di tutte le pagine adattate alla dimensione
 orizzontale e verticale della finestra principale.</li>
-	<li><b>Ruota a sinistra</b> ruota le pagine a sinistra (in senso antiorario) di
+    <li><b>Ruota a sinistra</b> ruota le pagine a sinistra (in senso antiorario) di
 90 gradi.</li>
-	<li><b>Ruota a destra</b> ruota le pagine a destra (in senso orario) di 90
+    <li><b>Ruota a destra</b> ruota le pagine a destra (in senso orario) di 90
 gradi.</li>
     <li><b>Inverti colori</b> indica se le pagine vengono mostrate con i colori
 invertiti.</li>
@@ -160,15 +162,15 @@ grayscale after rendering.</li>
 rendering.</li>
     <li><b>Composition</b> Enables the composition of the rendered page with the
 paper color to adjust the background of scanned documents.</li>
-	<li><b>Barre degli strumenti</b> contiene un elenco delle barre degli strumenti
+    <li><b>Barre degli strumenti</b> contiene un elenco delle barre degli strumenti
 disponibili per accedere rapidamente alle azioni svolte di frequente.</li>
-	<li><b>Elementi</b> contiene un elenco di elementi disponibili per mostrare
+    <li><b>Elementi</b> contiene un elenco di elementi disponibili per mostrare
 informazioni supplementari.</li>
-	<li><b>Caratteri...</b> apre un dialogo con l'elenco dei tipi di carattere usati
+    <li><b>Caratteri...</b> apre un dialogo con l'elenco dei tipi di carattere usati
 nel documento.</li>
-	<li><b>Schermo intero</b> attiva/disattiva la modalità a schermo intero. Per
+    <li><b>Schermo intero</b> attiva/disattiva la modalità a schermo intero. Per
 esempio, la finestra viene mostrata massimizzata e senza decorazioni.</li>
-	<li><b>Presentazione...</b> avvia la modalità "presentazione" che può essere
+    <li><b>Presentazione...</b> avvia la modalità "presentazione" che può essere
 terminata premendo F12 o Esc. I tasti "Home/Fine" vengono usati per mostrare
 la prima o l'ultima pagina. I tasti freccia su e giù, la barra spaziatrice e
 il tasto pagina giù vanno alla pagina successiva. I tasti freccia a sinistra
@@ -462,13 +464,14 @@ fitToPageWidthMode, fitToPageSizeMode, rotateLeft, rotateRight, fullscreen,
 presentation e separator. (Le modifiche hanno effetto dopo il riavvio.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Scrollable menus</b> Will override the default style so that pop-up menus
 scroll instead being laid-out in mutliple columns if they are larger than
 the available screen space. (Effective after restart.)</li>
