--- a/help/help_ku.html
+++ b/help/help_ku.html
@@ -29,14 +29,14 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Help</title>
+    <title>Alîkarî</title>
 </head>
 
 <body>
 
 <h2><a name="top">Help</a></h2>
 
-<h4>Table of contents</h4>
+<h4>Tabloya Naverokan</h4>
 <ol>
     <li><a href="#mainmenu">Main menu</a></li>
     <ol>
@@ -59,7 +59,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
     </ol>
 </ol>
 
-<h4>Introduction</h4>
+<h4>Destpêk</h4>
 
 <p><em>qpdfview</em> is a tabbed document viewer. It uses Poppler for PDF
 support, libspectre for PS support, DjVuLibre for DjVu support, CUPS for
