--- a/help/help_ms.html
+++ b/help/help_ms.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Bantuan</title>    
+    <title>Bantuan</title>
 </head>
 
 <body>
@@ -73,46 +73,48 @@ konfigurasinya.</p>
 <h4><a name="file">Fail</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Buka...</b> Buka dialog untuk memilih fail yang hendak dibuka dalam tab
+    <li><b>Buka...</b> Buka dialog untuk memilih fail yang hendak dibuka dalam tab
 semasa. Jika tiada tab, Fail akan dibuka pada tab baru.</li>
-	<li><b>Buka dalam tab baru...</b> Buka dialog untuk memilih fail yang hendak
+    <li><b>Buka dalam tab baru...</b> Buka dialog untuk memilih fail yang hendak
 dibuka dalam tab baru.</li>
-	<li><b>Diguna baru-baru ini</b> Mengandungi senarai fail yang baru diguna (jika
+    <li><b>Diguna baru-baru ini</b> Mengandungi senarai fail yang baru diguna (jika
 dibenarkan dalam tetapan).</li>
-	<li><b>Segar semula</b> Muat semula fail yang dipaparkan dalam tab semasa.</li>
-	<li><b>Simpan salinan...</b> Buka dialog untuk menyimpan salinan fail yang
-dipapar dalam tab semasa.</li>
-	<li><b>Simpan sebagai...</b> Buka dialog untuk simpan fail yang dipapar dalam
+    <li><b>Segar semula</b> Muat semula fail yang dipaparkan dalam tab semasa.</li>
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Simpan sebagai...</b> Buka dialog untuk simpan fail yang dipapar dalam
 tab semasa termasuklah perubahan pada anotasi dan medan borang.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Cetak...</b> Buka dialog untuk mencetak fail yang dipapar dalam tab
 semasa.</li>
-	<li><b>Keluar</b> Tutup semua tab dan tamatkan program.</li>
+    <li><b>Keluar</b> Tutup semua tab dan tamatkan program.</li>
 </ul>
 
 <h4><a name="edit">Sunting</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li>b>Halaman Berikut/Terdahulu/Pertama/Terakhir</b> Langkau ke halaman dokumen
+    <li>b>Halaman Berikut/Terdahulu/Pertama/Terakhir</b> Langkau ke halaman dokumen
 berikut/terdahulu/pertama/terakhir.</li>
     <li><b>Lompat ke halaman...</b> Buka dialog untuk masuk ke halaman dan dipapar
 pada tab semasa.</li>
     <li><b>Lompat undur/maju</b> Lompat undur/maju dalam sejarah halaman yang
 dipaparkan.</li>
-	<li><b>Gelintar...</b> Buka labuh gelintar dibawah paparan utama. Gelintar akan
+    <li><b>Gelintar...</b> Buka labuh gelintar dibawah paparan utama. Gelintar akan
 mula secara automatik dua saat selepas perubahan terakir terma gelintar atau
 ia dimulakan secara manual dengan menekan kekunci return. Jika pengubahsuai
 Shift ditahan ketika kekunci return masih ditekan, gelintar dimulakan dalam
 semua tab selain hanya tab semasa. (Kesan ini diterbalikkan jika labuh
 gelintar lanjutan dibenarkan di dalam tetapan.)</li>
-	<li><b>Cari terdahulu/berikut</b> Lompat ke kemunculan terma gelintar
+    <li><b>Cari terdahulu/berikut</b> Lompat ke kemunculan terma gelintar
 terdahulu/berikut didalam dokumen.</li>
-	<li><b>Batal gelintar</b> Batalkan gelintar yang sedang dijalankan dan tutu[
+    <li><b>Batal gelintar</b> Batalkan gelintar yang sedang dijalankan dan tutu[
 labuh gelintar.</li>
-	<li><b>Salin ke papan keratan</b> Jika ditanda, program akan tunggu bingkai
+    <li><b>Salin ke papan keratan</b> Jika ditanda, program akan tunggu bingkai
 diseret untuk salin teks atau imej.</li>
-	<li><b>Tambah anotasi</b> Jika ditanda, program akan tunggu bingkai diseret
+    <li><b>Tambah anotasi</b> Jika ditanda, program akan tunggu bingkai diseret
 untuk tambah anotasi.</li>
-	<li><b>Tetapan...</b> Buka dialog tetapan. Butang berlabel 'Lalai' akan
+    <li><b>Tetapan...</b> Buka dialog tetapan. Butang berlabel 'Lalai' akan
 kembalikan semua tetapan pada tab ke nilai lalainya. Butang berlabel 'Lalai
 pada tab semasa' akan hanya kembalikan tetapan pada tab semasa ke nilai
 lalai mereka.</li>
@@ -125,26 +127,26 @@ boleh difokus dengan menggunakan Ctrl+K, dan menekan kekunci return.</p>
 <h4><a name="view">Lihat</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Berterusan</b> Tentukan sama ada semua baris bentangan halaman kelihatan
+    <li><b>Berterusan</b> Tentukan sama ada semua baris bentangan halaman kelihatan
 serentak.</li>
-	<li><b>Dua halaman</b> Tentukan sama ada bentangan halaman gunakan dua lajur.</li>
-	<li><b>Dua halaman dengan muka hadapan</b> Tentukan sama ada bentangan halaman
+    <li><b>Dua halaman</b> Tentukan sama ada bentangan halaman gunakan dua lajur.</li>
+    <li><b>Dua halaman dengan muka hadapan</b> Tentukan sama ada bentangan halaman
 gunakan dua lajur dengan hentian selepas muka hadapan.</li>
-	<li><b>Halaman berbilang</b> Tentukan sama ada bentangan halaman gunakan lajur
+    <li><b>Halaman berbilang</b> Tentukan sama ada bentangan halaman gunakan lajur
 berbilang. Bilangan lajur boleh diubah dalam dialog tetapan.</li>
     <li><b>Kanan ke kiri</b> Tentukan bagaimana halaman disusun dalam bentangan
 dengan halaman berbilang per baris.</li>
-	<li><b>Zum masuk</b> Tingkatkan faktor skala sebanyak 10 peratus. Faktor skala
+    <li><b>Zum masuk</b> Tingkatkan faktor skala sebanyak 10 peratus. Faktor skala
 maksimum ialah 5000 peratus.</li>
-	<li><b>Zum keluar</b> Kurangkan faktor skala sebanyak 10 peratus. Faktor skala
+    <li><b>Zum keluar</b> Kurangkan faktor skala sebanyak 10 peratus. Faktor skala
 minimum ialah 10 peratus.</li>
-	<li><b>Saiz asal</b> Tetap semula faktor skala ke 100 peratus.</li>
+    <li><b>Saiz asal</b> Tetap semula faktor skala ke 100 peratus.</li>
     <li><b>Muat dengan lebar halaman</b> Tentukan faktor skala supaya semua halaman
 sepenuhnya muat ke dalam paparan utama secara mengufuk.</li>
-	<li><b>Muat dengan saiz halaman</b> Tentukan faktor skala supaya semua halaman
+    <li><b>Muat dengan saiz halaman</b> Tentukan faktor skala supaya semua halaman
 sepenuhnya muat ke dalam paparan utama secara mengufuk dan menegak.</li>
-	<li><b>Putar kiri</b> Putar halaman ke kiri/lawan jam sebanyak 90 darjah.</li>
-	<li><b>Putar kanan</b> Putar halaman ke kanan/ikut jam sebanyak 90 darjah.</li>
+    <li><b>Putar kiri</b> Putar halaman ke kiri/lawan jam sebanyak 90 darjah.</li>
+    <li><b>Putar kanan</b> Putar halaman ke kanan/ikut jam sebanyak 90 darjah.</li>
     <li><b>Warna songsang</b> Tentukan sama ada halaman diterap dengan warna
 songsang.</li>
     <li><b>Tukar ke skala kelabu</b> Tentukan sama ada halaman ditukar ke skala
@@ -153,14 +155,14 @@ kelabu selepas penerapan.</li>
 penerapan.</li>
     <li><b>Komposisi</b> Benarkan komposisi halaman terterap dengan warna kertas
 untuk melaras latar belakang dokumen diimbas.</li>
-	<li><b>Palang alat</b> Menu ini mengandungi senarai palang alat yang ada untuk
+    <li><b>Palang alat</b> Menu ini mengandungi senarai palang alat yang ada untuk
 mencapa tindakan yang kerap diguna.</li>
-	<li>b>Labuh</b> Menu ini mengandungi senarai labuh yang ada untuk memaparkan
+    <li>b>Labuh</b> Menu ini mengandungi senarai labuh yang ada untuk memaparkan
 maklumat tambahan.</li>
-	<li><b>Fon...</b> Buka dialog menyenaraikan fon yang diguna dalam dokumen.</li>
-	<li><b>Skrin Penuh</b> Togol ke mod skrin penuh, iaitu tetingkap dipaparkan
+    <li><b>Fon...</b> Buka dialog menyenaraikan fon yang diguna dalam dokumen.</li>
+    <li><b>Skrin Penuh</b> Togol ke mod skrin penuh, iaitu tetingkap dipaparkan
 secara maksimum dan tanpa hiasan.</li>
-	<li><b>Persemabahan...</b> Masuk ke mod persembahan dengan menekan kekunci F12
+    <li><b>Persemabahan...</b> Masuk ke mod persembahan dengan menekan kekunci F12
 atau escape. Kekunci home/end digunakan untuk paparkan halaman
 pertama/terakhir. Kekunci anak panah kanan dan bawah, kekunci space dan page
 down lompat ke halaman berikutnya. Kekunci anak panah kiri dan atas, kekunci
@@ -447,16 +449,16 @@ continuousMode, twoPagesMode, twoPagesWithCoverPageMode, multiplePagesMode,
 originalSize, fitToPageWidthMode, fitToPageSizeMode, rotateLeft,
 rotateRight, fullscreen, presentation dan separator. (Berkesan selepas mula
 semula.)</li>
-    <li><b>Menu konteks dokumen</b> Takrifkan tindakan yang tampak dalam menu
-konteks dokumen. Tindakan tersedia adalah openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch dan separator.</li>
-    <li><b>Menu konteks Tab</b> Takrifkan tindakan yang manakah tampak dalam menu
-konteks tab. Tindakan tersedia adalah openCopyInNewTab,
-openContainingFolder, copyFilePath, selectFilePath, closeAllTabs,
-closeAllTabsButThisOne, closeAllTabsToTheLeft, closeAllTabsToTheRight dan
-separator.</li>
+    <li><b>Document context menu</b> Defines which actions are visible in the
+document's context menu. Available actions are openCopyInNewTab,
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
+    <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Menu boleh tatal</b> Akan membatalkan gaya lalai supaya menu timbul
 ditatal selain dari dipersembahkan dalam lajur berbilang jika ia lebih besar
 dari ruang skrin sedia ada. (Berkesan selepas mula semula.)</li>
