--- a/help/help_pl.html
+++ b/help/help_pl.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Pomoc</title>    
+    <title>Pomoc</title>
 </head>
 
 <body>
@@ -73,46 +73,48 @@ wiersza polecenia i plików konfiguracyjnych.</p>
 <h4><a name="file">Plik</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Open...</b> Opens a dialog to choose a file to open in the current
+    <li><b>Open...</b> Opens a dialog to choose a file to open in the current
 tab. If there is no tab, the file is opened in a new tab.</li>
-	<li><b>Open in new tab...</b> Opens a dialog to choose files to open in new
+    <li><b>Open in new tab...</b> Opens a dialog to choose files to open in new
 tabs.</li>
-	<li><b>Recently used</b> Contains a list of the most recently used files (if
+    <li><b>Recently used</b> Contains a list of the most recently used files (if
 enabled in the settings).</li>
-	<li><b>Refresh</b> Reloads the file displayed in the current tab.</li>
-	<li><b>Save copy...</b> Opens a dialog to save a copy of the file displayed in
-the current tab.</li>
-	<li><b>Save as...</b> Opens a dialog to save the file displayed in the current
+    <li><b>Refresh</b> Reloads the file displayed in the current tab.</li>
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Save as...</b> Opens a dialog to save the file displayed in the current
 tab including changes to annotations and form fields.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Print...</b> Opens a dialog to print the file displayed in the current
 tab.</li>
-	<li><b>Wyjdź</b> Zamyka wszystkie zakładki i kończy działanie programu.</li>
+    <li><b>Wyjdź</b> Zamyka wszystkie zakładki i kończy działanie programu.</li>
 </ul>
 
 <h4><a name="edit">Edycja</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Next/Previous/First/Last page</b> Skips to the next/previous/first/last
+    <li><b>Next/Previous/First/Last page</b> Skips to the next/previous/first/last
 page of the document.</li>
     <li><b>Jump to page...</b> Opens a dialog to enter a page to display in the
 current tab.</li>
     <li><b>Jump backward/forward</b> Jumps backward/forward in the history of
 displayed page.</li>
-	<li><b>Search...</b> Opens the search dock below the main view. The search
+    <li><b>Search...</b> Opens the search dock below the main view. The search
 automatically starts two seconds after the last change of the search term or
 is manually started by pressing the return key. If the Shift modifier is
 held when the return key is pressed, the search starts in all tabs instead
 of just the current tab. (This effect is reversed if the extended search
 dock is enabled in the settings.)</li>
-	<li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
+    <li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
 search term in the document.</li>
-	<li><b>Cancel search</b> Cancels the currently running search and closes the
+    <li><b>Cancel search</b> Cancels the currently running search and closes the
 search dock.</li>
-	<li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
+    <li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
 dragged to copy texts or images.</li>
-	<li><b>Add annotation</b> If checked, the program will wait for a frame to be
+    <li><b>Add annotation</b> If checked, the program will wait for a frame to be
 dragged to add annotations.</li>
-	<li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
+    <li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
 will revert all settings on all tabs to their default values. The button
 labeled 'Defaults on current tab' will revert only the settings on the
 current tab to their default values.</li>
@@ -125,26 +127,26 @@ pressing the return key.</p>
 <h4><a name="view">View</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Continuous</b> Determines whether all rows of the page layout are visible
+    <li><b>Continuous</b> Determines whether all rows of the page layout are visible
 at once.</li>
-	<li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
-	<li><b>Two pages with cover page</b> Determines whether the page layout uses two
+    <li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
+    <li><b>Two pages with cover page</b> Determines whether the page layout uses two
 columns with a break after the cover page.</li>
-	<li><b>Multiple pages</b> Determines whether the page layout uses multiple
+    <li><b>Multiple pages</b> Determines whether the page layout uses multiple
 columns. The number of columns can be changed in the settings dialog.</li>
     <li><b>Right to left</b> Determines how pages are arranged in layouts with
 multiple pages per row.</li>
-	<li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
+    <li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
 factor is 5000 percent.</li>
-	<li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
+    <li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
 factor is 10 percent.</li>
-	<li><b>Original size</b> Resets the scale factor to 100 percent.</li>
+    <li><b>Original size</b> Resets the scale factor to 100 percent.</li>
     <li><b>Fit to page width</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally.</li>
-	<li><b>Fit to page size</b> Determines the scale factor such that all pages
+    <li><b>Fit to page size</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally and vertically.</li>
-	<li><b>Rotate left</b> Rotates the pages left/counterclockwise by 90 degrees.</li>
-	<li><b>Rotate right</b> Rotates the pages right/clockwise by 90 degrees.</li>
+    <li><b>Rotate left</b> Rotates the pages left/counterclockwise by 90 degrees.</li>
+    <li><b>Rotate right</b> Rotates the pages right/clockwise by 90 degrees.</li>
     <li><b>Invert colors</b> Determines whether pages are rendered with inverted
 colors.</li>
     <li><b>Convert to grayscale</b> Determines whether pages are converted to
@@ -153,14 +155,14 @@ grayscale after rendering.</li>
 rendering.</li>
     <li><b>Composition</b> Enables the composition of the rendered page with the
 paper color to adjust the background of scanned documents.</li>
-	<li><b>Tool bars</b> This menu contains a list of available tool bars for
+    <li><b>Tool bars</b> This menu contains a list of available tool bars for
 accessing frequently used actions.</li>
-	<li><b>Docks</b> This menu contains a list of available docks for displaying
+    <li><b>Docks</b> This menu contains a list of available docks for displaying
 supplementary information.</li>
-	<li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
-	<li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
+    <li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
+    <li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
 maximized and without decoration.</li>
-	<li><b>Presentation...</b> Enters presentation mode which can be left by
+    <li><b>Presentation...</b> Enters presentation mode which can be left by
 pressing F12 or escape. The home/end key is used to display the first/last
 page. Arrow keys right and down, space and the page down key jump to the
 next page. Arrow keys left and up, backspace and the page up key jump to the
@@ -439,13 +441,14 @@ fitToPageWidthMode, fitToPageSizeMode, rotateLeft, rotateRight, fullscreen,
 presentation and separator. (Effective after restart.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Scrollable menus</b> Will override the default style so that pop-up menus
 scroll instead being laid-out in mutliple columns if they are larger than
 the available screen space. (Effective after restart.)</li>
