--- a/help/help_pt_BR.html
+++ b/help/help_pt_BR.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Ajuda</title>    
+    <title>Ajuda</title>
 </head>
 
 <body>
@@ -74,46 +74,48 @@ de linha de comando e arquivos de configuração.</p>
 <h4><a name="file">Arquivo</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Abrir...</b> Abre uma janela para selecionar um arquivo para abrir na aba
+    <li><b>Abrir...</b> Abre uma janela para selecionar um arquivo para abrir na aba
 atual. Se não houver nenhuma aba, o arquivo é aberto é uma nova aba.</li>
-	<li><b>Abrir em nova aba...</b> Abre uma janela para selecionar arquivos a serem
+    <li><b>Abrir em nova aba...</b> Abre uma janela para selecionar arquivos a serem
 abertos em novas abas.</li>
-	<li><b>Recentemente usado</b> Contem uma lista dos arquivos recentemente
+    <li><b>Recentemente usado</b> Contem uma lista dos arquivos recentemente
 utilizados (se ativado nas configurações).</li>
-	<li><b>Atualizar</b> Recarrega o arquivo exibido na aba atual.</li>
-	<li><b>Salvar cópia...</b> Abre um diálogo para salvar uma cópia do arquivo
-exibido na aba atual.</li>
-	<li><b>Salvar como...</b> Abre um diálogo para salvar o arquivo exibido na aba
+    <li><b>Atualizar</b> Recarrega o arquivo exibido na aba atual.</li>
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Salvar como...</b> Abre um diálogo para salvar o arquivo exibido na aba
 atual incluindo alterações nas anotações e no formato.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Imprimir...</b> Abre um diálogo para imprimir o arquivo exibido na aba
 atual.</li>
-	<li><b>Sair</b> Fecha todas as abas e encerra o programa.</li>
+    <li><b>Sair</b> Fecha todas as abas e encerra o programa.</li>
 </ul>
 
 <h4><a name="edit">Editar</a><a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Próxima/Anterior/Primeira/Última página</b> Pula para a
+    <li><b>Próxima/Anterior/Primeira/Última página</b> Pula para a
 próxima/anterior/primeira/última página do documento.</li>
     <li><b>Ir para a página...</b> Abre um diálogo para colocar uma página para ser
 exibida na aba atual.</li>
     <li><b>Pular para trás/para frente</b> Pula para trás/frente no histórico da
 página em exibição.</li>
-	<li><b>Search...</b> Opens the search dock below the main view. The search
+    <li><b>Search...</b> Opens the search dock below the main view. The search
 automatically starts two seconds after the last change of the search term or
 is manually started by pressing the return key. If the Shift modifier is
 held when the return key is pressed, the search starts in all tabs instead
 of just the current tab. (This effect is reversed if the extended search
 dock is enabled in the settings.)</li>
-	<li><b>Encontrar anterior/próximo</b> Pula para a ocorrência anterior/próxima do
+    <li><b>Encontrar anterior/próximo</b> Pula para a ocorrência anterior/próxima do
 termo procurado no documento.</li>
-	<li><b>Cancel search</b> Cancels the currently running search and closes the
+    <li><b>Cancel search</b> Cancels the currently running search and closes the
 search dock.</li>
-	<li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
+    <li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
 dragged to copy texts or images.</li>
-	<li><b>Add annotation</b> If checked, the program will wait for a frame to be
+    <li><b>Add annotation</b> If checked, the program will wait for a frame to be
 dragged to add annotations.</li>
-	<li><b>Opções...</b> Abre o diálogo de configuração. O botão chamado 'Padrão'
+    <li><b>Opções...</b> Abre o diálogo de configuração. O botão chamado 'Padrão'
 irá reverter todas as configurações em todas as tabelas para seus valores
 padrões. O botão chamado 'Padrão na tabela atual' irá reverter apenas as
 configurações na tabela atual para seus valores padrões.</li>
@@ -126,26 +128,26 @@ pressing the return key.</p>
 <h4><a name="view">View</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Continuous</b> Determines whether all rows of the page layout are visible
+    <li><b>Continuous</b> Determines whether all rows of the page layout are visible
 at once.</li>
-	<li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
-	<li><b>Two pages with cover page</b> Determines whether the page layout uses two
+    <li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
+    <li><b>Two pages with cover page</b> Determines whether the page layout uses two
 columns with a break after the cover page.</li>
-	<li><b>Multiple pages</b> Determines whether the page layout uses multiple
+    <li><b>Multiple pages</b> Determines whether the page layout uses multiple
 columns. The number of columns can be changed in the settings dialog.</li>
     <li><b>Right to left</b> Determines how pages are arranged in layouts with
 multiple pages per row.</li>
-	<li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
+    <li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
 factor is 5000 percent.</li>
-	<li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
+    <li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
 factor is 10 percent.</li>
-	<li><b>Original size</b> Resets the scale factor to 100 percent.</li>
+    <li><b>Original size</b> Resets the scale factor to 100 percent.</li>
     <li><b>Fit to page width</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally.</li>
-	<li><b>Fit to page size</b> Determines the scale factor such that all pages
+    <li><b>Fit to page size</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally and vertically.</li>
-	<li><b>Rotate left</b> Rotates the pages left/counterclockwise by 90 degrees.</li>
-	<li><b>Rotate right</b> Rotates the pages right/clockwise by 90 degrees.</li>
+    <li><b>Rotate left</b> Rotates the pages left/counterclockwise by 90 degrees.</li>
+    <li><b>Rotate right</b> Rotates the pages right/clockwise by 90 degrees.</li>
     <li><b>Invert colors</b> Determines whether pages are rendered with inverted
 colors.</li>
     <li><b>Convert to grayscale</b> Determines whether pages are converted to
@@ -154,14 +156,14 @@ grayscale after rendering.</li>
 rendering.</li>
     <li><b>Composition</b> Enables the composition of the rendered page with the
 paper color to adjust the background of scanned documents.</li>
-	<li><b>Tool bars</b> This menu contains a list of available tool bars for
+    <li><b>Tool bars</b> This menu contains a list of available tool bars for
 accessing frequently used actions.</li>
-	<li><b>Docks</b> This menu contains a list of available docks for displaying
+    <li><b>Docks</b> This menu contains a list of available docks for displaying
 supplementary information.</li>
-	<li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
-	<li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
+    <li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
+    <li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
 maximized and without decoration.</li>
-	<li><b>Presentation...</b> Enters presentation mode which can be left by
+    <li><b>Presentation...</b> Enters presentation mode which can be left by
 pressing F12 or escape. The home/end key is used to display the first/last
 page. Arrow keys right and down, space and the page down key jump to the
 next page. Arrow keys left and up, backspace and the page up key jump to the
@@ -440,13 +442,14 @@ fitToPageWidthMode, fitToPageSizeMode, rotateLeft, rotateRight, fullscreen,
 presentation and separator. (Effective after restart.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Scrollable menus</b> Will override the default style so that pop-up menus
 scroll instead being laid-out in mutliple columns if they are larger than
 the available screen space. (Effective after restart.)</li>
