--- a/help/help_az.html
+++ b/help/help_az.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Yardım</title>    
+    <title>Yardım</title>
 </head>
 
 <body>
@@ -73,45 +73,47 @@ dəstəyi səhifəsindən istifadə edin.</p>
 <h4><a name="file">Fayl</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Aç...</b> hazırki siğmə üçün faylı açmaq üçündür. Əgər heç bir açığ siğmə
+    <li><b>Aç...</b> hazırki siğmə üçün faylı açmaq üçündür. Əgər heç bir açığ siğmə
 yoxdursa, fayl yeni siğmədə açılır.</li>
-	<li><b>Yeni siğmədə aç...</b> Faylı yeni siğmədə açmaq üçün faylı açma dialoq
+    <li><b>Yeni siğmədə aç...</b> Faylı yeni siğmədə açmaq üçün faylı açma dialoq
 pəncərəsini çağırır.</li>
-	<li><b>Recently used</b> Contains a list of the most recently used files (if
+    <li><b>Recently used</b> Contains a list of the most recently used files (if
 enabled in the settings).</li>
-	<li><b>Yenilə</b> Hazırkı siğmədə yerləşən faylı yenidən yükləyir.</li>
-	<li><b>Save copy...</b> Opens a dialog to save a copy of the file displayed in
-the current tab.</li>
-	<li><b>Save as...</b> Opens a dialog to save the file displayed in the current
+    <li><b>Yenilə</b> Hazırkı siğmədə yerləşən faylı yenidən yükləyir.</li>
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Save as...</b> Opens a dialog to save the file displayed in the current
 tab including changes to annotations and form fields.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Çap...</b> Hazılı çap etmək üçün çap dialoq pəncərəsini açır.</li>
-	<li><b>Çıxış</b> Bütün tabları bağla və proqramdan çıx.</li>
+    <li><b>Çıxış</b> Bütün tabları bağla və proqramdan çıx.</li>
 </ul>
 
 <h4><a name="edit">Redaktə</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li>Sənədirn <b>Növbəti/Öncəki/İlk/Sonuncu səhifə</b> Növbətiyə
+    <li>Sənədirn <b>Növbəti/Öncəki/İlk/Sonuncu səhifə</b> Növbətiyə
 keç/öncəkinə/ilkə/son səhifəyə.</li>
     <li><b>Səhifəyə keç...</b> Hazırki siğədə keçmək istəiyiniz səhifəyə keçid
 dialoq pəncərəsini çağırır.</li>
     <li><b>Jump backward/forward</b> Jumps backward/forward in the history of
 displayed page.</li>
-	<li><b>Search...</b> Opens the search dock below the main view. The search
+    <li><b>Search...</b> Opens the search dock below the main view. The search
 automatically starts two seconds after the last change of the search term or
 is manually started by pressing the return key. If the Shift modifier is
 held when the return key is pressed, the search starts in all tabs instead
 of just the current tab. (This effect is reversed if the extended search
 dock is enabled in the settings.)</li>
-	<li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
+    <li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
 search term in the document.</li>
-	<li><b>Cancel search</b> Cancels the currently running search and closes the
+    <li><b>Cancel search</b> Cancels the currently running search and closes the
 search dock.</li>
-	<li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
+    <li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
 dragged to copy texts or images.</li>
-	<li><b>Add annotation</b> If checked, the program will wait for a frame to be
+    <li><b>Add annotation</b> If checked, the program will wait for a frame to be
 dragged to add annotations.</li>
-	<li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
+    <li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
 will revert all settings on all tabs to their default values. The button
 labeled 'Defaults on current tab' will revert only the settings on the
 current tab to their default values.</li>
@@ -124,27 +126,27 @@ pressing the return key.</p>
 <h4><a name="view">Görünüş</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Davamedici</b> Səhifənin bütün sətrlərinin hansı halda eyni baxtda
+    <li><b>Davamedici</b> Səhifənin bütün sətrlərinin hansı halda eyni baxtda
 görünəcəyini təyin edir.</li>
-	<li><b>İki səhifə</b> Səhifədə iki sütundan istifadə edilməsinə gətirir.</li>
-	<li><b>Two pages with cover page</b> Determines whether the page layout uses two
+    <li><b>İki səhifə</b> Səhifədə iki sütundan istifadə edilməsinə gətirir.</li>
+    <li><b>Two pages with cover page</b> Determines whether the page layout uses two
 columns with a break after the cover page.</li>
-	<li><b>Multiple pages</b> Determines whether the page layout uses multiple
+    <li><b>Multiple pages</b> Determines whether the page layout uses multiple
 columns. The number of columns can be changed in the settings dialog.</li>
     <li><b>Right to left</b> Determines how pages are arranged in layouts with
 multiple pages per row.</li>
-	<li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
+    <li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
 factor is 5000 percent.</li>
-	<li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
+    <li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
 factor is 10 percent.</li>
-	<li><b>Orijinal ölçü</b> Miqyası orijinal 100%-ə qaytarır.</li>
+    <li><b>Orijinal ölçü</b> Miqyası orijinal 100%-ə qaytarır.</li>
     <li><b>Səhifənin eninə görə yerləşdir</b> Səhifənin bütövlüklə pəncərədə
 yerləşməsi miqyasına gətirir.</li>
-	<li><b>Fit to page size</b> Determines the scale factor such that all pages
+    <li><b>Fit to page size</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally and vertically.</li>
-	<li><b>Sola döndər</b> Shifəni sola (saat əqrəbi istiqamətinin əksinə) 90 dərəcə
+    <li><b>Sola döndər</b> Shifəni sola (saat əqrəbi istiqamətinin əksinə) 90 dərəcə
 döndərir.</li>
-	<li><b>Sola döndər</b> Shifəni sağa (saat əqrəbi istiqamətinə) 90 dərəcə
+    <li><b>Sola döndər</b> Shifəni sağa (saat əqrəbi istiqamətinə) 90 dərəcə
 döndərir.</li>
     <li><b>Invert colors</b> Determines whether pages are rendered with inverted
 colors.</li>
@@ -154,14 +156,14 @@ grayscale after rendering.</li>
 rendering.</li>
     <li><b>Composition</b> Enables the composition of the rendered page with the
 paper color to adjust the background of scanned documents.</li>
-	<li><b>Alətlər sətri</b> Bu menyu var olan bütün alətlər sətrlərinə tez ulaşmaq
+    <li><b>Alətlər sətri</b> Bu menyu var olan bütün alətlər sətrlərinə tez ulaşmaq
 üçün istifadə olunur.</li>
-	<li><b>Docks</b> This menu contains a list of available docks for displaying
+    <li><b>Docks</b> This menu contains a list of available docks for displaying
 supplementary information.</li>
-	<li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
-	<li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
+    <li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
+    <li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
 maximized and without decoration.</li>
-	<li><b>Presentation...</b> Enters presentation mode which can be left by
+    <li><b>Presentation...</b> Enters presentation mode which can be left by
 pressing F12 or escape. The home/end key is used to display the first/last
 page. Arrow keys right and down, space and the page down key jump to the
 next page. Arrow keys left and up, backspace and the page up key jump to the
@@ -440,13 +442,14 @@ fitToPageWidthMode, fitToPageSizeMode, rotateLeft, rotateRight, fullscreen,
 presentation and separator. (Effective after restart.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Scrollable menus</b> Will override the default style so that pop-up menus
 scroll instead being laid-out in mutliple columns if they are larger than
 the available screen space. (Effective after restart.)</li>
