--- a/help/help_ca.html
+++ b/help/help_ca.html
@@ -29,107 +29,115 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Help</title>
+    <title>Ajuda</title>
 </head>
 
 <body>
 
-<h2><a name="top">Help</a></h2>
+<h2><a name="top">Ajuda</a></h2>
 
-<h4>Table of contents</h4>
+<h4>Taula de continguts</h4>
 <ol>
-    <li><a href="#mainmenu">Main menu</a></li>
+    <li><a href="#mainmenu">Menú principal</a></li>
     <ol>
-        <li><a href="#file">File</a></li>
-        <li><a href="#edit">Edit</a></li>
-        <li><a href="#view">View</a></li>
-        <li><a href="#tabs">Tabs</a></li>
-        <li><a href="#bookmarks">Bookmarks</a></li>
-        <li><a href="#help">Help</a></li>
+        <li><a href="#file">Fitxer</a></li>
+        <li><a href="#edit">Edita</a></li>
+        <li><a href="#view">Visualitza</a></li>
+        <li><a href="#tabs">Pestanyes</a></li>
+        <li><a href="#bookmarks">Marcadors</a></li>
+        <li><a href="#help">Ajuda</a></li>
     </ol>
-    <li><a href="#mainview">Main view</a></li>
-    <li><a href="#auxiliaryviews">Auxiliary views</a></li>
-    <li><a href="#settings">Settings</a></li>
+    <li><a href="#mainview">Visualització principal</a></li>
+    <li><a href="#auxiliaryviews">Visualitzacions auxiliars</a></li>
+    <li><a href="#settings">Ajusts</a></li>
     <ol>
-    	<li><a href="#behaviorsettings">Behavior settings</a></li>
-    	<li><a href="#graphicssettings">Graphics settings</a></li>
-    	<li><a href="#interfacesettings">Interface settings</a></li>
-    	<li><a href="#shortcutsettings">Shortcut settings</a></li>
-    	<li><a href="#modifiersettings">Modifier settings</a></li>
+    	<li><a href="#behaviorsettings">Ajusts del comportament</a></li>
+    	<li><a href="#graphicssettings">Ajusts gràfics</a></li>
+    	<li><a href="#interfacesettings">Ajusts de la interfície</a></li>
+    	<li><a href="#shortcutsettings">Ajusts de les dreceres</a></li>
+    	<li><a href="#modifiersettings">Ajusts dels modificadors</a></li>
     </ol>
 </ol>
 
-<h4>Introduction</h4>
+<h4>Introducció</h4>
 
-<p><em>qpdfview</em> is a tabbed document viewer. It uses Poppler for PDF
-support, libspectre for PS support, DjVuLibre for DjVu support, CUPS for
-printing support and the Qt toolkit for its interface.</p>
+<p><em>qpdfview</em> és un visualitzador de documents amb pestanyes. Utilitza
+Poppler per a la compatibilitat amb PDF, libspectre per a la compatibilitat
+amb PS, DjVuLibre per a la compatibilitat amb DjVu, CUPS per a la
+compatibilitat amb la impressió i el conjunt d'eines Qt per a la seva
+interfície.</p>
 
-<p>Please refer to the manual page for information on command-line options and
-configuration files.</p>
+<p>Consulteu la pàgina del manual per obtenir informació sobre les opcions de
+la línia d'ordres i els fitxers de configuració.</p>
 
-<h3><a name="mainmenu">Main menu</a> <a href="#top">&uarr;</a></h3>
+<h3><a name="mainmenu">Menú principal</a> <a href="#top">&uarr;</a></h3>
 
-<h4><a name="file">File</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="file">Fitxer</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-    <li><b>Open...</b> Opens a dialog to choose a file to open in the current
-tab. If there is no tab, the file is opened in a new tab.</li>
-    <li><b>Open in new tab...</b> Opens a dialog to choose files to open in new
-tabs.</li>
-    <li><b>Recently used</b> Contains a list of the most recently used files (if
-enabled in the settings).</li>
-    <li><b>Refresh</b> Reloads the file displayed in the current tab.</li>
-    <li><b>Save</b> Saves changes to annotations and form fields to the file
-displayed in the current tab.</li>
-    <li><b>Save as...</b> Opens a dialog to save the file displayed in the current
-tab including changes to annotations and form fields.</li>
-    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
-displayed in the current tab.</li>
-    <li><b>Print...</b> Opens a dialog to print the file displayed in the current
-tab.</li>
-    <li><b>Exit</b> Closes all tabs and ends the program.</li>
+    <li><b>Obre...</b> Obre un diàleg per triar el fitxer que s'ha d'obrir a la
+pestanya actual. Si no hi ha cap pestanya, el fitxer s'obre en una pestanya
+nova.</li>
+    <li><b>Obre en una pestanya nova...</b> Obre un diàleg per triar els fitxers que
+s'han d'obrir en pestanyes noves.</li>
+    <li><b>Utilitzat recentment</b> Conté una llista dels fitxers utilitzats més
+recentment (si està habilitat als ajusts).</li>
+    <li><b>Refresca</b> Torna a carregar el fitxer que es mostra a la pestanya
+actual.</li>
+    <li><b>Desa</b> Desa els canvis a les anotacions i els camps del formulari al
+fitxer que es mostra a la pestanya actual.</li>
+    <li><b>Anomena i desa</b> Obre un diàleg per desar el fitxer que es mostra a la
+pestanya actual, incloent-hi els canvis a les anotacions i els camps del
+formulari.</li>
+    <li><b>Desa'n una còpia</b> Obre un diàleg per desar una còpia sense modificar
+el fitxer que es mostra a la pestanya actual.</li>
+    <li><b>Imprimeix...</b> Obre un diàleg per imprimir el fitxer que es mostra a la
+pestanya actual.</li>
+    <li><b>Surt</b> Tanca totes les pestanyes i finalitza el programa.</li>
 </ul>
 
-<h4><a name="edit">Edit</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="edit">Edita</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-    <li><b>Next/Previous/First/Last page</b> Skips to the next/previous/first/last
-page of the document.</li>
-    <li><b>Jump to page...</b> Opens a dialog to enter a page to display in the
-current tab.</li>
-    <li><b>Jump backward/forward</b> Jumps backward/forward in the history of
-displayed page.</li>
-    <li><b>Search...</b> Opens the search dock below the main view. The search
-automatically starts two seconds after the last change of the search term or
-is manually started by pressing the return key. If the Shift modifier is
-held when the return key is pressed, the search starts in all tabs instead
-of just the current tab. (This effect is reversed if the extended search
-dock is enabled in the settings.)</li>
-    <li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
-search term in the document.</li>
-    <li><b>Cancel search</b> Cancels the currently running search and closes the
-search dock.</li>
-    <li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
-dragged to copy texts or images.</li>
-    <li><b>Add annotation</b> If checked, the program will wait for a frame to be
-dragged to add annotations.</li>
-    <li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
-will revert all settings on all tabs to their default values. The button
-labeled 'Defaults on current tab' will revert only the settings on the
-current tab to their default values.</li>
+    <li><b>Següent/Anterior/Primera/Última pàgina</b> Passa a la
+següent,anterior,primera o última pàgina del document.</li>
+    <li><b>Salta a la pàgina...</b> Obre un diàleg per introduir la pàgina que s'ha
+de mostrar a la pestanya actual.</li>
+    <li><b>Salta cap enrere/endavant</b> Salta cap enrere o endavant a la història
+de la pàgina que es mostra.</li>
+    <li><b>Cerca...</b> Obre l'acoblador de cerca a sota de la visualització
+principal. La cerca s'inicia automàticament passats dos segons de l'últim
+canvi al terme de cerca o s'inicia manualment en prémer la tecla de
+retorn. Si el modificador Maj es manté quan es prem la tecla de retorn, la
+cerca s'inicia en totes les pestanyes en lloc de només la pestanya
+actual. (Aquest efecte s'inverteix si l'acoblador de cerca ampliada està
+habilitat als ajusts).</li>
+    <li><b>Troba l'anterior/la següent/</b> Salta a l'anterior o a la següent
+ocurrència del terme de cerca al document.</li>
+    <li><b>Cancel·la la cerca</b> Cancel·la la cerca que s'està executant i tanca
+l'acoblador de cerca.</li>
+    <li><b>Copia al porta-retalls</b> Si es marca, el programa esperarà que
+arrossegueu un marc per copiar texts o imatges.</li>
+    <li><b>Afegeix anotacions</b> Si es marca, el programa esperarà que arrossegueu
+un marc per afegir-hi anotacions.</li>
+    <li><b>Ajusts...</b> Obre el diàleg dels ajusts. El botó anomenat "Valors
+predeterminats" revertirà tots els ajusts a totes les pestanyes als valors
+predeterminats. El botó anomenat "Valors predeterminats a la pestanya
+actual" només revertirà els ajusts de la pestanya actual als valors
+predeterminats.</li>
 </ul>
 
-<p>The <em>current page</em> can be changed by entering the desired page into
-the text field in the edit tool bar, which can be focused using Ctrl+K, and
-pressing the return key.</p>
+<p>La <em>pàgina actual</em> es pot canviar introduint la pàgina desitjada al
+camp de text a la barra d'eines d'edició, que es pot donar el focus
+mitjançant Ctrl+K i prement la tecla de retorn.</p>
 
-<h4><a name="view">View</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="view">Visualitza</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-    <li><b>Continuous</b> Determines whether all rows of the page layout are visible
-at once.</li>
-    <li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
+    <li><b>Continu</b> Determina si totes les files del disseny de pàgina estan
+visibles alhora.</li>
+    <li><b>Dos pàgines</b> Determina si el disseny de pàgina fa servir dues
+columnes.</li>
     <li><b>Two pages with cover page</b> Determines whether the page layout uses two
 columns with a break after the cover page.</li>
     <li><b>Multiple pages</b> Determines whether the page layout uses multiple
