--- a/help/help_sk.html
+++ b/help/help_sk.html
@@ -29,7 +29,7 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
 <html>
 
 <head>
-    <title>Pomocník</title>    
+    <title>Pomocník</title>
 </head>
 
 <body>
@@ -41,78 +41,80 @@ This file is additionally licensed under the Creative Commons Attribution-ShareA
     <li>Hlavné menu</li>
     <ol>
         <li><a href="#file">Súbor</a></li>
-        <li><a href="#edit">Edit</a></li>
-        <li><a href="#view">View</a></li>
-        <li><a href="#tabs">Tabs</a></li>
-        <li><a href="#bookmarks">Bookmarks</a></li>
-        <li><a href="#help">Help</a></li>
+        <li><a href="#edit">Upraviť</a></li>
+        <li><a href="#view">Zobraziť</a></li>
+        <li><a href="#tabs">Karty</a></li>
+        <li><a href="#bookmarks">Záložky</a></li>
+        <li><a href="#help">Nápoveda</a></li>
     </ol>
-    <li><a href="#mainview">Main view</a></li>
-    <li><a href="#auxiliaryviews">Auxiliary views</a></li>
-    <li><a href="#settings">Settings</a></li>
+    <li><a href="#mainview">Hlavné zobrazenie</a></li>
+    <li><a href="#auxiliaryviews">Pomocné zobrazenia</a></li>
+    <li><a href="#settings">Nastavenia</a></li>
     <ol>
-    	<li><a href="#behaviorsettings">Behavior settings</a></li>
-    	<li><a href="#graphicssettings">Graphics settings</a></li>
-    	<li><a href="#interfacesettings">Interface settings</a></li>
-    	<li><a href="#shortcutsettings">Shortcut settings</a></li>
-    	<li><a href="#modifiersettings">Modifier settings</a></li>
+    	<li><a href="#behaviorsettings">Nastavenia správania</a></li>
+    	<li><a href="#graphicssettings">Nastavenia grafiky</a></li>
+    	<li><a href="#interfacesettings">Nastavenia rozhrania</a></li>
+    	<li><a href="#shortcutsettings">Nastavenia klávesových skratiek</a></li>
+    	<li><a href="#modifiersettings">Nastavenia modifikátorov</a></li>
     </ol>
 </ol>
 
 <h4>Úvod</h4>
 
-<p><em>qpdfview</em> is a tabbed document viewer. It uses Poppler for PDF
-support, libspectre for PS support, DjVuLibre for DjVu support, CUPS for
-printing support and the Qt toolkit for its interface.</p>
+<p><em>qpdfview</em> prehliadač dokumentov na kartách. Používa Poppler pre
+podporu PDF, libspectre pre podporu PS, DjVuLibre pre podporu DjVu, CUPS pro
+podporu tlače a Qt toolkit pre svoje rozhranie.</p>
 
-<p>Please refer to the manual page for information on command-line options and
-configuration files.</p>
+<p>Pozrite sa, prosím, do manuálových stránok, ak hľadáte informácie k
+možnostiam príkazového riadka a k súborom s nastavením.</p>
 
-<h3><a name="mainmenu">Main menu</a> <a href="#top">&uarr;</a></h3>
+<h3><a name="mainmenu">Hlavné menu</a> <a href="#top">&uarr;</a></h3>
 
-<h4><a name="file">File</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="file">Súbor</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Open...</b> Opens a dialog to choose a file to open in the current
+    <li><b>Open...</b> Opens a dialog to choose a file to open in the current
 tab. If there is no tab, the file is opened in a new tab.</li>
-	<li><b>Open in new tab...</b> Opens a dialog to choose files to open in new
+    <li><b>Open in new tab...</b> Opens a dialog to choose files to open in new
 tabs.</li>
-	<li><b>Recently used</b> Contains a list of the most recently used files (if
+    <li><b>Recently used</b> Contains a list of the most recently used files (if
 enabled in the settings).</li>
-	<li><b>Refresh</b> Reloads the file displayed in the current tab.</li>
-	<li><b>Save copy...</b> Opens a dialog to save a copy of the file displayed in
-the current tab.</li>
-	<li><b>Save as...</b> Opens a dialog to save the file displayed in the current
+    <li><b>Refresh</b> Reloads the file displayed in the current tab.</li>
+    <li><b>Save</b> Saves changes to annotations and form fields to the file
+displayed in the current tab.</li>
+    <li><b>Save as...</b> Opens a dialog to save the file displayed in the current
 tab including changes to annotations and form fields.</li>
+    <li><b>Save copy...</b> Opens a dialog to save an umodified copy of the file
+displayed in the current tab.</li>
     <li><b>Print...</b> Opens a dialog to print the file displayed in the current
 tab.</li>
-	<li><b>Exit</b> Closes all tabs and ends the program.</li>
+    <li><b>Exit</b> Closes all tabs and ends the program.</li>
 </ul>
 
-<h4><a name="edit">Edit</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="edit">Upraviť</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Next/Previous/First/Last page</b> Skips to the next/previous/first/last
+    <li><b>Next/Previous/First/Last page</b> Skips to the next/previous/first/last
 page of the document.</li>
     <li><b>Jump to page...</b> Opens a dialog to enter a page to display in the
 current tab.</li>
     <li><b>Jump backward/forward</b> Jumps backward/forward in the history of
 displayed page.</li>
-	<li><b>Search...</b> Opens the search dock below the main view. The search
+    <li><b>Search...</b> Opens the search dock below the main view. The search
 automatically starts two seconds after the last change of the search term or
 is manually started by pressing the return key. If the Shift modifier is
 held when the return key is pressed, the search starts in all tabs instead
 of just the current tab. (This effect is reversed if the extended search
 dock is enabled in the settings.)</li>
-	<li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
+    <li><b>Find previous/next</b> Jumps to the previous/next occurrence of the
 search term in the document.</li>
-	<li><b>Cancel search</b> Cancels the currently running search and closes the
+    <li><b>Cancel search</b> Cancels the currently running search and closes the
 search dock.</li>
-	<li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
+    <li><b>Copy to clipboard</b> If checked, the program will wait for a frame to be
 dragged to copy texts or images.</li>
-	<li><b>Add annotation</b> If checked, the program will wait for a frame to be
+    <li><b>Add annotation</b> If checked, the program will wait for a frame to be
 dragged to add annotations.</li>
-	<li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
+    <li><b>Settings...</b> Opens the settings dialog. The button labeled 'Defaults'
 will revert all settings on all tabs to their default values. The button
 labeled 'Defaults on current tab' will revert only the settings on the
 current tab to their default values.</li>
@@ -122,29 +124,29 @@ current tab to their default values.</li>
 the text field in the edit tool bar, which can be focused using Ctrl+K, and
 pressing the return key.</p>
 
-<h4><a name="view">View</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="view">Zobraziť</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
-	<li><b>Continuous</b> Determines whether all rows of the page layout are visible
+    <li><b>Continuous</b> Determines whether all rows of the page layout are visible
 at once.</li>
-	<li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
-	<li><b>Two pages with cover page</b> Determines whether the page layout uses two
+    <li><b>Two pages</b> Determines whether the page layout uses two columns.</li>
+    <li><b>Two pages with cover page</b> Determines whether the page layout uses two
 columns with a break after the cover page.</li>
-	<li><b>Multiple pages</b> Determines whether the page layout uses multiple
+    <li><b>Multiple pages</b> Determines whether the page layout uses multiple
 columns. The number of columns can be changed in the settings dialog.</li>
     <li><b>Right to left</b> Determines how pages are arranged in layouts with
 multiple pages per row.</li>
-	<li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
+    <li><b>Zoom in</b> Increases the scale factor by 10 percent. The maximum scale
 factor is 5000 percent.</li>
-	<li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
+    <li><b>Zoom out</b> Decreases the scale factor by 10 percent. The minimum scale
 factor is 10 percent.</li>
-	<li><b>Original size</b> Resets the scale factor to 100 percent.</li>
+    <li><b>Original size</b> Resets the scale factor to 100 percent.</li>
     <li><b>Fit to page width</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally.</li>
-	<li><b>Fit to page size</b> Determines the scale factor such that all pages
+    <li><b>Fit to page size</b> Determines the scale factor such that all pages
 fully fit into the main view horizontally and vertically.</li>
-	<li><b>Rotate left</b> Rotates the pages left/counterclockwise by 90 degrees.</li>
-	<li><b>Rotate right</b> Rotates the pages right/clockwise by 90 degrees.</li>
+    <li><b>Rotate left</b> Rotates the pages left/counterclockwise by 90 degrees.</li>
+    <li><b>Rotate right</b> Rotates the pages right/clockwise by 90 degrees.</li>
     <li><b>Invert colors</b> Determines whether pages are rendered with inverted
 colors.</li>
     <li><b>Convert to grayscale</b> Determines whether pages are converted to
@@ -153,14 +155,14 @@ grayscale after rendering.</li>
 rendering.</li>
     <li><b>Composition</b> Enables the composition of the rendered page with the
 paper color to adjust the background of scanned documents.</li>
-	<li><b>Tool bars</b> This menu contains a list of available tool bars for
+    <li><b>Tool bars</b> This menu contains a list of available tool bars for
 accessing frequently used actions.</li>
-	<li><b>Docks</b> This menu contains a list of available docks for displaying
+    <li><b>Docks</b> This menu contains a list of available docks for displaying
 supplementary information.</li>
-	<li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
-	<li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
+    <li><b>Fonts...</b> Opens a dialog listing the fonts used in the document.</li>
+    <li><b>Fullscreen</b> Toggles the fullscreen mode, i.e. the window is shown
 maximized and without decoration.</li>
-	<li><b>Presentation...</b> Enters presentation mode which can be left by
+    <li><b>Presentation...</b> Enters presentation mode which can be left by
 pressing F12 or escape. The home/end key is used to display the first/last
 page. Arrow keys right and down, space and the page down key jump to the
 next page. Arrow keys left and up, backspace and the page up key jump to the
@@ -172,7 +174,7 @@ last jump.</li>
 into the text field in the view tool bar, which can be focused using Ctrl+L,
 and pressing the return key.</p>
 
-<h4><a name="tabs">Tabs</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="tabs">Karty</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Previous/Next tab</b> Makes the previous/next tab the current tab. Cycles
@@ -190,7 +192,7 @@ clicking on the corresponding menu item. Tabs can also be closed by
 middle-clicking. The first nine tabs can also be activated by holding the
 Alt modifier and pressing keys one to nine.</p>
 
-<h4><a name="bookmarks">Bookmarks</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="bookmarks">Záložky</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Previous bookmark</b> Jumps to the closest bookmark before the current
@@ -207,14 +209,14 @@ file is already open. Otherwise the corresponding file is opened in a new
 tab.</li>
 </ul>
 
-<h4><a name="help">Help</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="help">Nápoveda</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
 	<li><b>Contents</b> Displays this document.</li>
 	<li><b>About</b> Displays the program version.</li>
 </ul>
 
-<h3><a name="mainview">Main view</a> <a href="#top">&uarr;</a></h3>
+<h3><a name="mainview">Hlavné zobrazenie</a> <a href="#top">&uarr;</a></h3>
 
 <p>The backspace/space key skips to the previous/next page. The home/end key
 skips to the first/last page. The arrow, page up and page down keys scroll
@@ -262,7 +264,7 @@ and hold the left mouse button to drag a frame around region to zoom into.</p>
 configurable keyboard shortcuts whose default values are "Shift+Alt+T" and
 "Shift+Alt+M".</p>
 
-<h3><a name="auxiliaryviews">Auxiliary views</a> <a href="#top">&uarr;</a></h3>
+<h3><a name="auxiliaryviews">Pomocné zobrazenia</a> <a href="#top">&uarr;</a></h3>
 
 <p>The <em>outline view</em> displays an overview of the contents of the
 document. A left click on an entry jumps to the respective page in the main
@@ -296,9 +298,10 @@ tabs. It also shows the text surrounding a result with the search term being
 emphasized. Clicking on a result opens the corresponding tab and jumps to
 its position.</p>
 
-<h3><a name="settings">Settings</a> <a href="#top">&uarr;</a></h3>
+<h3><a name="settings">Nastavenia</a> <a href="#top">&uarr;</a></h3>
 
-<h4><a name="behaviorsettings">Behavior settings</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="behaviorsettings">Nastavenia správania</a> <a
+href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Open URL</b> Determines whether links to URL are opened in the default
@@ -340,7 +343,7 @@ replaced by the absolute file path. '%2' resp. '%3' is replaced by line
 resp. column number.</li>
 </ul>
 
-<h4><a name="graphicssettings">Graphics settings</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="graphicssettings">Nastavenia grafiky</a> <a href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Use tiling</b> Pages will be divided into tiles before rendering and
@@ -376,7 +379,7 @@ limit increasing rendering speed at the cost of increased memory usage.</li>
 visible increasing rendering speed at the cost of increased cache usage.</li>
     <li><b>Prefetch distance</b> The number of rows beyond the current row and twice
 the number of rows before the current row that are prefetched.</li>
-    <li><b>PDF settings</b>
+    <li><b>Nastavenia PDF</b>
     <ul>
         <li><b>Antialiasing</b> Improves display quality at the cost of performance</li>
         <li><b>Text antialiasing</b> Improves text display quality at the cost of
@@ -388,7 +391,7 @@ on top of another is displayed.</li>
         <li><b>Backend</b> Chooses the backend used to render pages.</li>
     </ul>
     </li>
-    <li><b>PS settings</b>
+    <li><b>Nastavenia PS</b>
     <ul>
         <li><b>Graphics antialias bits</b> Determines the amount of antialiasing for
 graphics.</li>
@@ -397,7 +400,8 @@ graphics.</li>
     </li>
 </ul>
 
-<h4><a name="interfacesettings">Interface settings</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="interfacesettings">Nastavenia rozhrania</a> <a
+href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Extended search dock</b> If enabled, the default search dock is extended
@@ -439,13 +443,14 @@ fitToPageWidthMode, fitToPageSizeMode, rotateLeft, rotateRight, fullscreen,
 presentation and separator. (Effective after restart.)</li>
     <li><b>Document context menu</b> Defines which actions are visible in the
 document's context menu. Available actions are openCopyInNewTab,
-openContainingFolder, previousPage, nextPage, firstPage, lastPage,
-jumpToPage, jumpBackward, jumpForward, setFirstPage, findPrevious, findNext,
-cancelSearch and separator.</li>
+openCopyInNewWindow, openContainingFolder, moveToInstance, previousPage,
+nextPage, firstPage, lastPage, jumpToPage, jumpBackward, jumpForward,
+setFirstPage, findPrevious, findNext, cancelSearch and separator.</li>
     <li><b>Tab context menu</b> Defines which actions are visible in a tab's context
-menu. Available actions are openCopyInNewTab, openContainingFolder,
-copyFilePath, selectFilePath, closeAllTabs, closeAllTabsButThisOne,
-closeAllTabsToTheLeft, closeAllTabsToTheRight and separator.</li>
+menu. Available actions are openCopyInNewTab, openCopyInNewWindow,
+openContainingFolder, moveToInstance, copyFilePath, selectFilePath,
+closeAllTabs, closeAllTabsButThisOne, closeAllTabsToTheLeft,
+closeAllTabsToTheRight and separator.</li>
     <li><b>Scrollable menus</b> Will override the default style so that pop-up menus
 scroll instead being laid-out in mutliple columns if they are larger than
 the available screen space. (Effective after restart.)</li>
@@ -469,7 +474,8 @@ conducted, only the pages where the search term is found are displayed in
 the thumbnails view.</li>
 </ul>
 
-<h4><a name="shortcutsettings">Shortcut settings</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="shortcutsettings">Nastavenia klávesových skratiek</a> <a
+href="#top">&uarr;</a></h4>
 
 <p>The shortcut settings allows the adjustment of keyboard shortcuts to
 personal preference. Shortcuts are changed by double-clicking on the
@@ -480,7 +486,8 @@ keys that are not single letters are written out explicitly (e.g. "Alt",
 contains modifier keys, the names of the keys are joined by a plus sign and
 modifier keys must be listed first, e.g. "Ctrl+A" or "Ctrl++".</p>
 
-<h4><a name="modifiersettings">Modifier settings</a> <a href="#top">&uarr;</a></h4>
+<h4><a name="modifiersettings">Nastavenia modifikátorov</a> <a
+href="#top">&uarr;</a></h4>
 
 <ul>
     <li><b>Zoom</b> The keyboard modifiers to zoom using the mouse wheel in the main
